--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -3066,6 +3066,7 @@ chapters=Kappaleet
 character-options=Merkkivalinnat
 character-threshold=Character Threshold (Automatic Copy)
 character-threshold-for-displaying-suggestions=Merkkiraja ehdotusten näyttämiselle
+character-threshold-for-displaying-suggestions-help=Set the number of characters the user should type before seeing suggestions. (Automatic Copy)
 characters=Merkit
 characters-blacklist=Merkkien Musta Lista
 characters-maximum=Merkkiä maksimissaan
@@ -5377,6 +5378,7 @@ display-fields-and-one-to-one-relationships=Näytä kentät ja kahdenväliset su
 display-folder-facet=Näytä kansion näkymä
 display-frequencies=Näyttötaajuudet
 display-group-name=Näytä ryhmän nimi
+display-group-name-help=Enter the heading label for the suggestions from each contributor. (Automatic Copy)
 display-horizontally=Näytä vaakasuunnassa
 display-immediately=Näytä välittömästi
 display-label=Näytä tunniste
@@ -6739,6 +6741,7 @@ field.user-name=Nimi
 fields=Kentät
 fields-are-added-if-you-need-to-distinguish-items-based-on-criteria-chosen-by-the-user=Kenttiä lisätään kun on tarve erottaa tuotteita asiakkaan kriteerien perusteella. Esimerkiksi, kun myyt t-paitoja, haluat ehkä lisätä kentän nimellä <em>Koko</em> ja arvot <em>S, M, L, XL</em>. Syötä mahdolliset arvot pilkulla erotettuna listana.
 fields-help=Luettelo kentistä, joista teksti haetaan ja analysoidaan.
+fields-suggestion-help=Specify additional fields to return with the response. (Automatic Copy)
 fields-to-display=Näytettävät Kentät
 fields-to-display-help=Anna yhteenvedossa näytettävien kenttien lukumäärä pilkulla erotettuna luettelona. Jos tätä ei ole asetettu, kaikki kentät näytetään. Ensimmäinen kenttä näytetään aina otsikkona. Jos kaksi kenttään on asetettu, toinen kenttä näytetään aina sisältönä.
 fields-to-return=Palautettavat Kentät
@@ -7828,7 +7831,9 @@ include-all-the-information-someone-would-need-to-answer-your-question=Sisällyt
 include-always=Sisällytä Aina
 include-artifact-in-repository=Sisällytä artefakti varastoon
 include-asset-summary=Sisällytä sisällön yhteenveto
+include-asset-summary-help=Enable to return the result summary with the response. (Automatic Copy)
 include-asset-url=Sisällytä sisällön URL
+include-asset-url-help=Enable to return the link to the result with the response. (Automatic Copy)
 include-bundle-symbolic-name=Sisällytä Nipun Symboliset Nimet
 include-bundle-symbolic-name-description=Kun valittuna, nipun symbolinen nimi sisällytetään käyttöalueen etuliitteeseen.
 include-clear-filters-option=Lisää suodattimien tyhjennysvalinta
@@ -14984,6 +14989,7 @@ sites-tab-description=Sivustoja voi määrittää vain yhdelle ominaisuudelle ke
 sites-that-i-administer=Sivustot joita ylläpidän
 sites-to-sync-x=Synkronoitavat Sivustot – {0}
 size=Koko
+size-suggestion-help=Set the maximum number of results to display in suggestions. (Automatic Copy)
 skip-to-content=Hyppää sisältöön
 skip-to-search=Ohita haku
 sku=SKU:t
@@ -15499,6 +15505,7 @@ successfully-unassigned-display-page-template=Liitäntä poistettu onnistuneesti
 such-as-x-or-x=Kuten {0} tai {1}
 suffix=Pääte
 suggestion-contributor=Ehdotusavustaja
+suggestion-contributor-help=Enter the name of the contributor used to display suggestions. (Automatic Copy)
 suggestion-in-progress-email=Ehdotukset meneillään sähköposti.
 suggestion-received-email=Ehdotukset vastaanotettu sähköposti
 suggestion-resolved-email=Ehdotukset ratkaistu sähköposti
@@ -15507,8 +15514,10 @@ suggestion-was-deleted-successfully=Ehdotus poistettiin onnistuneesti.
 suggestion-was-saved-successfully=Ehdotus tallennettiin onnistuneesti.
 suggestions=Ehdotukset
 suggestions-configuration=Ehdotusmääritys
+suggestions-configuration-description=Configure the suggestions a user sees while entering search terms. (Automatic Copy)
 suggestions-contributor-configuration=Ehdotusten avustajan määritys
 suggestions-contributor-configuration-help=Aseta ehdotusten avustajan määritys-JSON.
+suggestions-contributor-configuration-system-settings-help=Enter the contributorName for the suggestions contributor, the displayGroupName with the header text to display, and the size to control the maximum results returned by the contributor. (Automatic Copy)
 suggestions-were-deleted-successfully=Ehdotukset poistettiin onnistuneesti.
 suite=Ohjelmisto
 sum=Summa
