--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -3066,6 +3066,7 @@ chapters=Fejezetek
 character-options=Karakterek lehetőségei
 character-threshold=Character Threshold (Automatic Copy)
 character-threshold-for-displaying-suggestions=A javaslatok megjelenítésének karakter-küszöbértéke
+character-threshold-for-displaying-suggestions-help=Set the number of characters the user should type before seeing suggestions. (Automatic Copy)
 characters=Karakterek
 characters-blacklist=Karakterek feketelistája
 characters-maximum=Maximum karakter
@@ -5377,6 +5378,7 @@ display-fields-and-one-to-one-relationships=Mezők és egy-az-egyhez kapcsolatok
 display-folder-facet=Mappa Facet megjelenítése
 display-frequencies=Megjelenítés gyakorisága
 display-group-name=Csoportnév megjelenítése
+display-group-name-help=Enter the heading label for the suggestions from each contributor. (Automatic Copy)
 display-horizontally=Megjelenítés vízszintesen
 display-immediately=Megjelenítés azonnal
 display-label=Címke megjelenítése
@@ -6739,6 +6741,7 @@ field.user-name=Név
 fields=Mezők
 fields-are-added-if-you-need-to-distinguish-items-based-on-criteria-chosen-by-the-user=További mezők használhatók, ha a felhasználó által megadott kritériumok alapján kell megkülönböztetni a tételeket. Például pólók árusítása esetén hozzáadható egy <em>Méret</em> mező, <em>S, M, L, XL</em> értékekkel. Az értékeket vesszővel elválasztva kell megadni.
 fields-help=A mezők listája, amelyekből a szöveget beolvassuk és elemezzük.
+fields-suggestion-help=Specify additional fields to return with the response. (Automatic Copy)
 fields-to-display=Megjelenítendő mezők
 fields-to-display-help=Adja meg az összegzésben megjelenítendő mezők nevét egy vesszőkkel elválasztott listában. Ha nincs beállítva, minden mező megjelenik. Az első mező mindig címként jelenik meg. Ha két mező van beállítva, a második mező mindig tartalomként jelenik meg.
 fields-to-return=A visszaadandó mezők
@@ -7828,7 +7831,9 @@ include-all-the-information-someone-would-need-to-answer-your-question=Adjon meg
 include-always=Mindig belefoglalni
 include-artifact-in-repository=Tárgy bevitele az adattárba
 include-asset-summary=Tartalom összegzésével együtt
+include-asset-summary-help=Enable to return the result summary with the response. (Automatic Copy)
 include-asset-url=Tartalom URL-címével együtt
+include-asset-url-help=Enable to return the link to the result with the response. (Automatic Copy)
 include-bundle-symbolic-name=A csomag szimbolikus nevével együtt
 include-bundle-symbolic-name-description=Ha meg van jelölve, a csomag szimbolikus neve kerül a hatókör előtagjába.
 include-clear-filters-option=Szűrők törlési lehetőségével együtt
@@ -14988,6 +14993,7 @@ sites-tab-description=A webhelyek egyszerre csak egy tulajdonsághoz rendelhető
 sites-that-i-administer=Webhelyek, amiket án adminisztrálok
 sites-to-sync-x=Szinkronizálandó webhelyek - {0}
 size=Méret
+size-suggestion-help=Set the maximum number of results to display in suggestions. (Automatic Copy)
 skip-to-content=Ugrás a tartalomhoz
 skip-to-search=Ugrás a kereséshez
 sku=SKU (leltári azonosító)
@@ -15503,6 +15509,7 @@ successfully-unassigned-display-page-template=A alapértelmezett megjelenítőol
 such-as-x-or-x=Mint {0} vagy {1}
 suffix=Utótag
 suggestion-contributor=Javaslat közreműködője
+suggestion-contributor-help=Enter the name of the contributor used to display suggestions. (Automatic Copy)
 suggestion-in-progress-email=Javaslat folyamatban e-mail
 suggestion-received-email=Javaslat beérkezett e-mail
 suggestion-resolved-email=Javaslat megoldva e-mail
@@ -15511,8 +15518,10 @@ suggestion-was-deleted-successfully=A javaslat sikeresen törölve.
 suggestion-was-saved-successfully=Javaslat sikeresen elmentve.
 suggestions=Javaslatok
 suggestions-configuration=Javaslatok konfigurációja
+suggestions-configuration-description=Configure the suggestions a user sees while entering search terms. (Automatic Copy)
 suggestions-contributor-configuration=Javaslatbenyújtó konfigurációja
 suggestions-contributor-configuration-help=A javaslatbenyújtó konfigurációs JSON beállítása.
+suggestions-contributor-configuration-system-settings-help=Enter the contributorName for the suggestions contributor, the displayGroupName with the header text to display, and the size to control the maximum results returned by the contributor. (Automatic Copy)
 suggestions-were-deleted-successfully=A javaslatok sikeresen törölve.
 suite=Programcsomag
 sum=Összeg
