--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -3065,6 +3065,7 @@ chapters=Capitoli
 character-options=Opzioni carattere (Automatic Translation)
 character-threshold=Character Threshold (Automatic Copy)
 character-threshold-for-displaying-suggestions=Character Threshold for Displaying Suggestions (Automatic Copy)
+character-threshold-for-displaying-suggestions-help=Set the number of characters the user should type before seeing suggestions. (Automatic Copy)
 characters=Characters (Automatic Copy)
 characters-blacklist=Personaggi Lista nera (Automatic Translation)
 characters-maximum=Numero massimo caratteri
@@ -5376,6 +5377,7 @@ display-fields-and-one-to-one-relationships=Display fields and one to one relati
 display-folder-facet=Visualizza Cartella Facet
 display-frequencies=Visualizzare le frequenze (Automatic Translation)
 display-group-name=Display Group Name (Automatic Copy)
+display-group-name-help=Enter the heading label for the suggestions from each contributor. (Automatic Copy)
 display-horizontally=Display Horizontally (Automatic Copy)
 display-immediately=Visualizza Immediatamente
 display-label=Display Label (Automatic Copy)
@@ -6738,6 +6740,7 @@ field.user-name=User Name (Automatic Copy)
 fields=Campi
 fields-are-added-if-you-need-to-distinguish-items-based-on-criteria-chosen-by-the-user=I campi sono aggiunti se hai bisogno di distinguere gli articoli in base a criteri scelti dall'utente. Per esempio, se stai vendendo magliette, puoi aggiungere un campo con nome <em>Taglia</em> e i valori <em>S, M, L, XL</em>. Inserisci i valori in una lista delimitati da virgole.
 fields-help=Immettere un elenco di campi da recuperare e analizzare dal documento di input. (Automatic Translation)
+fields-suggestion-help=Specify additional fields to return with the response. (Automatic Copy)
 fields-to-display=Campi da visualizzare (Automatic Translation)
 fields-to-display-help=Immettere i nomi dei campi da visualizzare nel riepilogo, in un elenco separato da virgole. Se non impostato, vengono visualizzati tutti i campi. Il primo campo viene sempre visualizzato come titolo. Se sono impostati due campi, il secondo campo viene sempre visualizzato come contenuto. (Automatic Translation)
 fields-to-return=Campi da restituire (Automatic Translation)
@@ -7827,7 +7830,9 @@ include-all-the-information-someone-would-need-to-answer-your-question=Includi t
 include-always=Includi Sempre
 include-artifact-in-repository=Includi il manufatto nel repository
 include-asset-summary=Include Asset Summary (Automatic Copy)
+include-asset-summary-help=Enable to return the result summary with the response. (Automatic Copy)
 include-asset-url=Include Asset URL (Automatic Copy)
+include-asset-url-help=Enable to return the link to the result with the response. (Automatic Copy)
 include-bundle-symbolic-name=Includi nome simbolico bundle (Automatic Translation)
 include-bundle-symbolic-name-description=Se selezionata, il nome simbolico del bundle verrà incluso nel prefisso dell'ambito. (Automatic Translation)
 include-clear-filters-option=Include Clear Filters Option (Automatic Copy)
@@ -14986,6 +14991,7 @@ sites-tab-description=Sites can only be assigned to a single property at a time.
 sites-that-i-administer=Siti che amministro
 sites-to-sync-x=Siti da sincronizzare - {0}
 size=Dimensione
+size-suggestion-help=Set the maximum number of results to display in suggestions. (Automatic Copy)
 skip-to-content=Salta al contenuto
 skip-to-search=Vai alla Ricerca
 sku=Sku (Automatic Translation)
@@ -15501,6 +15507,7 @@ successfully-unassigned-display-page-template=Modello di pagina di visualizzazio
 such-as-x-or-x=Come {0} o {1}
 suffix=Suffisso
 suggestion-contributor=Suggestion Contributor (Automatic Copy)
+suggestion-contributor-help=Enter the name of the contributor used to display suggestions. (Automatic Copy)
 suggestion-in-progress-email=Suggerimento in elaborazione Email
 suggestion-received-email=Suggerimento Ricevuto Email
 suggestion-resolved-email=Suggerimento Risolto Email
@@ -15509,8 +15516,10 @@ suggestion-was-deleted-successfully=Suggestion was deleted successfully. (Automa
 suggestion-was-saved-successfully=Suggestion was saved successfully. (Automatic Copy)
 suggestions=Suggerimenti
 suggestions-configuration=Suggestions Configuration (Automatic Copy)
+suggestions-configuration-description=Configure the suggestions a user sees while entering search terms. (Automatic Copy)
 suggestions-contributor-configuration=Suggestions Contributor Configuration (Automatic Copy)
 suggestions-contributor-configuration-help=Set the suggestions contributor configuration JSON. (Automatic Copy)
+suggestions-contributor-configuration-system-settings-help=Enter the contributorName for the suggestions contributor, the displayGroupName with the header text to display, and the size to control the maximum results returned by the contributor. (Automatic Copy)
 suggestions-were-deleted-successfully=Suggestions were deleted successfully. (Automatic Copy)
 suite=suite (Automatic Translation)
 sum=Somma (Automatic Translation)
