--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -3066,6 +3066,7 @@ chapters=פרקים
 character-options=אפשרויות תו (Automatic Translation)
 character-threshold=Character Threshold (Automatic Copy)
 character-threshold-for-displaying-suggestions=Character Threshold for Displaying Suggestions (Automatic Copy)
+character-threshold-for-displaying-suggestions-help=Set the number of characters the user should type before seeing suggestions. (Automatic Copy)
 characters=Characters (Automatic Copy)
 characters-blacklist=רשימה שחורה של תווים
 characters-maximum=מקסימום תווים
@@ -5377,6 +5378,7 @@ display-fields-and-one-to-one-relationships=Display fields and one to one relati
 display-folder-facet=הצג היבט תיקייה
 display-frequencies=תדירויות תצוגה
 display-group-name=Display Group Name (Automatic Copy)
+display-group-name-help=Enter the heading label for the suggestions from each contributor. (Automatic Copy)
 display-horizontally=Display Horizontally (Automatic Copy)
 display-immediately=הצג באופן מיידי
 display-label=Display Label (Automatic Copy)
@@ -6739,6 +6741,7 @@ field.user-name=User Name (Automatic Copy)
 fields=שדות
 fields-are-added-if-you-need-to-distinguish-items-based-on-criteria-chosen-by-the-user=ניתן להוסיף שדות אם ברצונך לציין פריטים תחת קריטריון מסוים. למשל, אם אתה מוכר חולצות, תוכל להוסיף שדה <em>גודל</em> וערכים <em>S, M, L, XL</em>. הכנס את הערכים כרשימה המופרדת בפסיקים."
 fields-help=הזן רשימת שדות להבאה וניתוח ממסמך הקלט. (Automatic Translation)
+fields-suggestion-help=Specify additional fields to return with the response. (Automatic Copy)
 fields-to-display=שדות להצגה (Automatic Translation)
 fields-to-display-help=הזן את שמות השדות שיוצגו בתקציר, ברשימה מופרדת באמצעות פסיקים. אם לא הוגדר, כל השדות יוצגו. השדה הראשון מוצג תמיד ככותרת. אם מוגדרים שני שדות, השדה השני מוצג תמיד כתוכן. (Automatic Translation)
 fields-to-return=שדות להחזרה (Automatic Translation)
@@ -7828,7 +7831,9 @@ include-all-the-information-someone-would-need-to-answer-your-question=כלול 
 include-always=כלול תמיד
 include-artifact-in-repository=כלול מוצר מלאכותי במאגר
 include-asset-summary=Include Asset Summary (Automatic Copy)
+include-asset-summary-help=Enable to return the result summary with the response. (Automatic Copy)
 include-asset-url=Include Asset URL (Automatic Copy)
+include-asset-url-help=Enable to return the link to the result with the response. (Automatic Copy)
 include-bundle-symbolic-name=כלול את השם הסמלי של החבילה
 include-bundle-symbolic-name-description=אם האפשרות נבחרה, השם הסמלי של החבילה ייכלל בקידומת התחום.
 include-clear-filters-option=Include Clear Filters Option (Automatic Copy)
@@ -14985,6 +14990,7 @@ sites-tab-description=Sites can only be assigned to a single property at a time.
 sites-that-i-administer=אתרים שאני מנהל
 sites-to-sync-x=Sites to Sync - {0} (Automatic Copy)
 size=גודל
+size-suggestion-help=Set the maximum number of results to display in suggestions. (Automatic Copy)
 skip-to-content=דלג לתוכן
 skip-to-search=דלג לחיפוש
 sku=יחידות SKU
@@ -15500,6 +15506,7 @@ successfully-unassigned-display-page-template=תבנית דף תצוגה שלא 
 such-as-x-or-x=כגון {0} או {1}
 suffix=סיומת
 suggestion-contributor=Suggestion Contributor (Automatic Copy)
+suggestion-contributor-help=Enter the name of the contributor used to display suggestions. (Automatic Copy)
 suggestion-in-progress-email=דוא"ל הצעה בתהליך
 suggestion-received-email=דוא"ל הצעה התקבלה
 suggestion-resolved-email=דוא"ל הצעה נפתרה
@@ -15508,8 +15515,10 @@ suggestion-was-deleted-successfully=Suggestion was deleted successfully. (Automa
 suggestion-was-saved-successfully=Suggestion was saved successfully. (Automatic Copy)
 suggestions=המלצות
 suggestions-configuration=Suggestions Configuration (Automatic Copy)
+suggestions-configuration-description=Configure the suggestions a user sees while entering search terms. (Automatic Copy)
 suggestions-contributor-configuration=Suggestions Contributor Configuration (Automatic Copy)
 suggestions-contributor-configuration-help=Set the suggestions contributor configuration JSON. (Automatic Copy)
+suggestions-contributor-configuration-system-settings-help=Enter the contributorName for the suggestions contributor, the displayGroupName with the header text to display, and the size to control the maximum results returned by the contributor. (Automatic Copy)
 suggestions-were-deleted-successfully=Suggestions were deleted successfully. (Automatic Copy)
 suite=סט
 sum=סכום
