--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -3066,6 +3066,7 @@ chapters=Kapitler
 character-options=Alternativer for tegn (Automatic Translation)
 character-threshold=Character Threshold (Automatic Copy)
 character-threshold-for-displaying-suggestions=Character Threshold for Displaying Suggestions (Automatic Copy)
+character-threshold-for-displaying-suggestions-help=Set the number of characters the user should type before seeing suggestions. (Automatic Copy)
 characters=Characters (Automatic Copy)
 characters-blacklist=Svartelistede tegn
 characters-maximum=Maksimalt antall tegn
@@ -5377,6 +5378,7 @@ display-fields-and-one-to-one-relationships=Display fields and one to one relati
 display-folder-facet=Visningsmappefasett
 display-frequencies=Vis frekvenser (Automatic Translation)
 display-group-name=Display Group Name (Automatic Copy)
+display-group-name-help=Enter the heading label for the suggestions from each contributor. (Automatic Copy)
 display-horizontally=Display Horizontally (Automatic Copy)
 display-immediately=Vi umiddelbart
 display-label=Display Label (Automatic Copy)
@@ -6739,6 +6741,7 @@ field.user-name=User Name (Automatic Copy)
 fields=Felt
 fields-are-added-if-you-need-to-distinguish-items-based-on-criteria-chosen-by-the-user=Felt legges til om du behøver å separere varene. Eksempelvis, om du selger t-skjorter, vil du antageligvis legge til et felt med navnet <em>Størrelse</em> som innholder <em>S, M, L, XL</em>. Separere alle verdiene i feltet med komma.
 fields-help=Skriv inn en liste over felt som skal hentes og analyseres fra inndatadokumentet. (Automatic Translation)
+fields-suggestion-help=Specify additional fields to return with the response. (Automatic Copy)
 fields-to-display=Felt som skal vises (Automatic Translation)
 fields-to-display-help=Skriv inn navnene på feltene som skal vises i sammendraget, i en kommadelt liste. Hvis ikke angitt, vises alle feltene. Det første feltet vises alltid som tittel. Hvis det er angitt to felt, vises alltid det andre feltet som innholdet. (Automatic Translation)
 fields-to-return=Felt som skal returneres (Automatic Translation)
@@ -7828,7 +7831,9 @@ include-all-the-information-someone-would-need-to-answer-your-question=Ta med al
 include-always=Inkluder alltid (Automatic Translation)
 include-artifact-in-repository=Inkluder artifakt i repositoriet
 include-asset-summary=Include Asset Summary (Automatic Copy)
+include-asset-summary-help=Enable to return the result summary with the response. (Automatic Copy)
 include-asset-url=Include Asset URL (Automatic Copy)
+include-asset-url-help=Enable to return the link to the result with the response. (Automatic Copy)
 include-bundle-symbolic-name=Inkluder bundle symbolic navn
 include-bundle-symbolic-name-description=Når valgt vil bundle symbolic navn bli inkludert i virkeområdeprefiks.
 include-clear-filters-option=Include Clear Filters Option (Automatic Copy)
@@ -14985,6 +14990,7 @@ sites-tab-description=Sites can only be assigned to a single property at a time.
 sites-that-i-administer=Nettsteder som jeg administrerer
 sites-to-sync-x=Nettsteder å synkronisere - {0}
 size=Størrelse
+size-suggestion-help=Set the maximum number of results to display in suggestions. (Automatic Copy)
 skip-to-content=Hopp til innhold
 skip-to-search=Hopp til søk
 sku=Artikelnummer
@@ -15500,6 +15506,7 @@ successfully-unassigned-display-page-template=Visningssidemalen som ikke er tilo
 such-as-x-or-x=Slik som {0} eller {1}
 suffix=Tittel
 suggestion-contributor=Suggestion Contributor (Automatic Copy)
+suggestion-contributor-help=Enter the name of the contributor used to display suggestions. (Automatic Copy)
 suggestion-in-progress-email=Forslag i fremskrittsepost
 suggestion-received-email=Forslag mottatt epost
 suggestion-resolved-email=Forslag løst epost
@@ -15508,8 +15515,10 @@ suggestion-was-deleted-successfully=Suggestion was deleted successfully. (Automa
 suggestion-was-saved-successfully=Suggestion was saved successfully. (Automatic Copy)
 suggestions=Forslag
 suggestions-configuration=Suggestions Configuration (Automatic Copy)
+suggestions-configuration-description=Configure the suggestions a user sees while entering search terms. (Automatic Copy)
 suggestions-contributor-configuration=Suggestions Contributor Configuration (Automatic Copy)
 suggestions-contributor-configuration-help=Set the suggestions contributor configuration JSON. (Automatic Copy)
+suggestions-contributor-configuration-system-settings-help=Enter the contributorName for the suggestions contributor, the displayGroupName with the header text to display, and the size to control the maximum results returned by the contributor. (Automatic Copy)
 suggestions-were-deleted-successfully=Suggestions were deleted successfully. (Automatic Copy)
 suite=suite (Automatic Translation)
 sum=Summen (Automatic Translation)
