--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -3066,6 +3066,7 @@ chapters=Poglavja
 character-options=Možnosti znakov (Automatic Translation)
 character-threshold=Character Threshold (Automatic Copy)
 character-threshold-for-displaying-suggestions=Character Threshold for Displaying Suggestions (Automatic Copy)
+character-threshold-for-displaying-suggestions-help=Set the number of characters the user should type before seeing suggestions. (Automatic Copy)
 characters=Characters (Automatic Copy)
 characters-blacklist=Znaki Črni seznam (Automatic Translation)
 characters-maximum=Največ znakov
@@ -5377,6 +5378,7 @@ display-fields-and-one-to-one-relationships=Display fields and one to one relati
 display-folder-facet=Prikaz mape Facet (Automatic Translation)
 display-frequencies=Prikaz frekvenc (Automatic Translation)
 display-group-name=Display Group Name (Automatic Copy)
+display-group-name-help=Enter the heading label for the suggestions from each contributor. (Automatic Copy)
 display-horizontally=Display Horizontally (Automatic Copy)
 display-immediately=Prikaži takoj (Automatic Translation)
 display-label=Display Label (Automatic Copy)
@@ -6739,6 +6741,7 @@ field.user-name=User Name (Automatic Copy)
 fields=Polja
 fields-are-added-if-you-need-to-distinguish-items-based-on-criteria-chosen-by-the-user=Dodajte polja, če želite razvrstiti izdelke glede na uporabniške kriterije. Na primer, če prodajate majice, boste verjetno dodali polje <em>Velikost</em> z vrednostmi <em>S, M, L, XL</em>. Vrednosti vnesite kot seznam, ločen z vejico.
 fields-help=Vnesite seznam polj, ki jih želite prinesti in analizirati iz vnosnega dokumenta. (Automatic Translation)
+fields-suggestion-help=Specify additional fields to return with the response. (Automatic Copy)
 fields-to-display=Polja za prikaz (Automatic Translation)
 fields-to-display-help=Vnesite imena polj, ki jih želite prikazati v povzetku, na seznamu, ločenem z vejcami. Če ni nastavljeno, so prikazana vsa polja. Prvo polje je vedno prikazano kot naslov. Če sta nastavljeni dve polji, je drugo polje vedno prikazano kot vsebina. (Automatic Translation)
 fields-to-return=Polja za vrnitev (Automatic Translation)
@@ -7828,7 +7831,9 @@ include-all-the-information-someone-would-need-to-answer-your-question=Vključit
 include-always=Vključi vedno (Automatic Translation)
 include-artifact-in-repository=Vključi artefakt v skladišču
 include-asset-summary=Include Asset Summary (Automatic Copy)
+include-asset-summary-help=Enable to return the result summary with the response. (Automatic Copy)
 include-asset-url=Include Asset URL (Automatic Copy)
+include-asset-url-help=Enable to return the link to the result with the response. (Automatic Copy)
 include-bundle-symbolic-name=Vključi simbolično ime paketa (Automatic Translation)
 include-bundle-symbolic-name-description=Ko je izbrano, bo simbolično ime paketa vključeno v predpono obsega. (Automatic Translation)
 include-clear-filters-option=Include Clear Filters Option (Automatic Copy)
@@ -14985,6 +14990,7 @@ sites-tab-description=Sites can only be assigned to a single property at a time.
 sites-that-i-administer=Mesta, ki jih upravljam (Automatic Translation)
 sites-to-sync-x=Sites to Sync - {0} (Automatic Copy)
 size=Velikost
+size-suggestion-help=Set the maximum number of results to display in suggestions. (Automatic Copy)
 skip-to-content=Preskoči na vsebino (Automatic Translation)
 skip-to-search=Preskoči na iskanje (Automatic Translation)
 sku=Enota skladiščenja
@@ -15500,6 +15506,7 @@ successfully-unassigned-display-page-template=Uspešno nedeljene predloge strani
 such-as-x-or-x=Such as {0} or {1} (Automatic Copy)
 suffix=Končnica
 suggestion-contributor=Suggestion Contributor (Automatic Copy)
+suggestion-contributor-help=Enter the name of the contributor used to display suggestions. (Automatic Copy)
 suggestion-in-progress-email=Predlog v e-pošti poteka (Automatic Translation)
 suggestion-received-email=Predlog prejeti e-poštni naslov (Automatic Translation)
 suggestion-resolved-email=Predlog rešene e-pošte (Automatic Translation)
@@ -15508,8 +15515,10 @@ suggestion-was-deleted-successfully=Suggestion was deleted successfully. (Automa
 suggestion-was-saved-successfully=Suggestion was saved successfully. (Automatic Copy)
 suggestions=Predlogi
 suggestions-configuration=Suggestions Configuration (Automatic Copy)
+suggestions-configuration-description=Configure the suggestions a user sees while entering search terms. (Automatic Copy)
 suggestions-contributor-configuration=Suggestions Contributor Configuration (Automatic Copy)
 suggestions-contributor-configuration-help=Set the suggestions contributor configuration JSON. (Automatic Copy)
+suggestions-contributor-configuration-system-settings-help=Enter the contributorName for the suggestions contributor, the displayGroupName with the header text to display, and the size to control the maximum results returned by the contributor. (Automatic Copy)
 suggestions-were-deleted-successfully=Suggestions were deleted successfully. (Automatic Copy)
 suite=Suite (Automatic Translation)
 sum=Vsota (Automatic Translation)
