--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -3066,6 +3066,7 @@ chapters=Capítols
 character-options=Opcions de caràcters
 character-threshold=Character Threshold (Automatic Copy)
 character-threshold-for-displaying-suggestions=Límit de caràcters per mostrar suggeriments
+character-threshold-for-displaying-suggestions-help=Set the number of characters the user should type before seeing suggestions. (Automatic Copy)
 characters=Caràcters
 characters-blacklist=Llista negra de caràcters
 characters-maximum=Nombre màxim de caràcters
@@ -5377,6 +5378,7 @@ display-fields-and-one-to-one-relationships=Mostra els camps i les relacions d'u
 display-folder-facet=Aspecte de la carpeta de visualització
 display-frequencies=Freqüències de visualització
 display-group-name=Mostra el nom del grup
+display-group-name-help=Enter the heading label for the suggestions from each contributor. (Automatic Copy)
 display-horizontally=Mostra horitzontalment
 display-immediately=Mostra immediatament
 display-label=Mostra l'etiqueta
@@ -6739,6 +6741,7 @@ field.user-name=Nom
 fields=Camps
 fields-are-added-if-you-need-to-distinguish-items-based-on-criteria-chosen-by-the-user=S'afegiran camps si necessiteu que es distingeixin els elements basats en els criteris escollits per l'usuari. Per exemple, si esteu venent samarretes, podeu afegir un camp amb el nom <em>Talla</em> i el valors <em>S, M, L, XL</em>. Introduïu els valors separant-los per comes.
 fields-help=Una llista de camps on anar a buscar i analitzar el text.
+fields-suggestion-help=Specify additional fields to return with the response. (Automatic Copy)
 fields-to-display=Camps que s'han de mostrar
 fields-to-display-help=Introduïu els noms dels camps que s'hagin de mostrar al resum, en una llista separada per comes. Si no es defineixen, es mostren tots els camps. El primer camp es mostra sempre com a títol. Si es defineixen dos camps, el segon camp es mostra sempre com a contingut.
 fields-to-return=Camps que s'han de retornar
@@ -7828,7 +7831,9 @@ include-all-the-information-someone-would-need-to-answer-your-question=Incloeu t
 include-always=Incloure Sempre
 include-artifact-in-repository=Inclou l'artefacte en el repositori
 include-asset-summary=Inclou el resum del contingut
+include-asset-summary-help=Enable to return the result summary with the response. (Automatic Copy)
 include-asset-url=Inclou l'URL del contingut
+include-asset-url-help=Enable to return the link to the result with the response. (Automatic Copy)
 include-bundle-symbolic-name=Inclou nom simbòlic de grup
 include-bundle-symbolic-name-description=Si està seleccionat, el nom simbòlic del grup s'inclourà en prefix d'àmbit.
 include-clear-filters-option=Inclou l'opció Suprimeix els filtres
@@ -14987,6 +14992,7 @@ sites-tab-description=Els llocs web només es poden assignar a una sola propieta
 sites-that-i-administer=Els lloc que administro
 sites-to-sync-x=Llocs web per sincronitzar - {0}
 size=Mida
+size-suggestion-help=Set the maximum number of results to display in suggestions. (Automatic Copy)
 skip-to-content=Salta al contigut
 skip-to-search=Salta a la cerca
 sku=referència
@@ -15502,6 +15508,7 @@ successfully-unassigned-display-page-template=S'ha anul·lat correctament l'assi
 such-as-x-or-x=Com per exemple {0} o {1}
 suffix=Sufix
 suggestion-contributor=Contribuïdor del suggeriment
+suggestion-contributor-help=Enter the name of the contributor used to display suggestions. (Automatic Copy)
 suggestion-in-progress-email=Suggeriment en procés de correu electrònic
 suggestion-received-email=Email de suggeriment rebut
 suggestion-resolved-email=Email de suggeriment resolt
@@ -15510,8 +15517,10 @@ suggestion-was-deleted-successfully=El suggeriment s'ha suprimit correctament.
 suggestion-was-saved-successfully=El suggeriment s'ha desat correctament.
 suggestions=Suggeriments
 suggestions-configuration=Configuració de suggeriments
+suggestions-configuration-description=Configure the suggestions a user sees while entering search terms. (Automatic Copy)
 suggestions-contributor-configuration=Configuració del contribuïdor de suggeriments
 suggestions-contributor-configuration-help=Definiu el JSON de configuració del contribuïdor de suggeriments.
+suggestions-contributor-configuration-system-settings-help=Enter the contributorName for the suggestions contributor, the displayGroupName with the header text to display, and the size to control the maximum results returned by the contributor. (Automatic Copy)
 suggestions-were-deleted-successfully=Els suggeriments s'han suprimit correctament.
 suite=Paquet
 sum=Suma
