--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -3066,6 +3066,7 @@ chapters=Chapters (Automatic Copy)
 character-options=Indstillinger for tegn (Automatic Translation)
 character-threshold=Character Threshold (Automatic Copy)
 character-threshold-for-displaying-suggestions=Character Threshold for Displaying Suggestions (Automatic Copy)
+character-threshold-for-displaying-suggestions-help=Set the number of characters the user should type before seeing suggestions. (Automatic Copy)
 characters=Characters (Automatic Copy)
 characters-blacklist=Tegn Sortliste (Automatic Translation)
 characters-maximum=Characters Maximum (Automatic Copy)
@@ -5377,6 +5378,7 @@ display-fields-and-one-to-one-relationships=Display fields and one to one relati
 display-folder-facet=Vis mappefacet (Automatic Translation)
 display-frequencies=Vis frekvenser (Automatic Translation)
 display-group-name=Display Group Name (Automatic Copy)
+display-group-name-help=Enter the heading label for the suggestions from each contributor. (Automatic Copy)
 display-horizontally=Display Horizontally (Automatic Copy)
 display-immediately=Display Immediately (Automatic Copy)
 display-label=Display Label (Automatic Copy)
@@ -6739,6 +6741,7 @@ field.user-name=User Name (Automatic Copy)
 fields=Felter
 fields-are-added-if-you-need-to-distinguish-items-based-on-criteria-chosen-by-the-user=Felter are added if you need to distinguish items based on criteria chosen by the user. For example, if you are selling t-shirts, you may want to add a field with the name <em>Size</em> and the values <em>S, M, L, XL</em>. Enter the values as a list of comma delimited options.
 fields-help=Angiv en liste over felter, der skal hentes og analyseres fra inputdokumentet. (Automatic Translation)
+fields-suggestion-help=Specify additional fields to return with the response. (Automatic Copy)
 fields-to-display=Felter, der skal vises (Automatic Translation)
 fields-to-display-help=Angiv navnene på de felter, der skal vises i oversigten, på en kommasepareret liste. Hvis den ikke er angivet, vises alle felter. Det første felt vises altid som titlen. Hvis der er angivet to felter, vises det andet felt altid som indholdet. (Automatic Translation)
 fields-to-return=Felter, der skal returneres (Automatic Translation)
@@ -7828,7 +7831,9 @@ include-all-the-information-someone-would-need-to-answer-your-question=Medtag al
 include-always=Medtag altid (Automatic Translation)
 include-artifact-in-repository=Inkluder artifakt i repositoriet
 include-asset-summary=Include Asset Summary (Automatic Copy)
+include-asset-summary-help=Enable to return the result summary with the response. (Automatic Copy)
 include-asset-url=Include Asset URL (Automatic Copy)
+include-asset-url-help=Enable to return the link to the result with the response. (Automatic Copy)
 include-bundle-symbolic-name=Medtag symbolsk bundtnavn (Automatic Translation)
 include-bundle-symbolic-name-description=Når denne indstilling er valgt, medtages det symbolske bundtnavn i områdepræfikset. (Automatic Translation)
 include-clear-filters-option=Include Clear Filters Option (Automatic Copy)
@@ -14985,6 +14990,7 @@ sites-tab-description=Sites can only be assigned to a single property at a time.
 sites-that-i-administer=Sites That I Administer (Automatic Copy)
 sites-to-sync-x=Sites to Sync - {0} (Automatic Copy)
 size=Websted
+size-suggestion-help=Set the maximum number of results to display in suggestions. (Automatic Copy)
 skip-to-content=Skip to Content (Automatic Copy)
 skip-to-search=Skip to Search (Automatic Copy)
 sku=SKU (Automatic Copy)
@@ -15500,6 +15506,7 @@ successfully-unassigned-display-page-template=Den ikke-tildelte visningssideskab
 such-as-x-or-x=Såsom {0} eller {1}
 suffix=Suffiks
 suggestion-contributor=Suggestion Contributor (Automatic Copy)
+suggestion-contributor-help=Enter the name of the contributor used to display suggestions. (Automatic Copy)
 suggestion-in-progress-email=E-mail med forslag i gang (Automatic Translation)
 suggestion-received-email=Forslag modtaget e-mail (Automatic Translation)
 suggestion-resolved-email=Forslag løst e-mail (Automatic Translation)
@@ -15508,8 +15515,10 @@ suggestion-was-deleted-successfully=Suggestion was deleted successfully. (Automa
 suggestion-was-saved-successfully=Suggestion was saved successfully. (Automatic Copy)
 suggestions=Suggestions (Automatic Copy)
 suggestions-configuration=Suggestions Configuration (Automatic Copy)
+suggestions-configuration-description=Configure the suggestions a user sees while entering search terms. (Automatic Copy)
 suggestions-contributor-configuration=Suggestions Contributor Configuration (Automatic Copy)
 suggestions-contributor-configuration-help=Set the suggestions contributor configuration JSON. (Automatic Copy)
+suggestions-contributor-configuration-system-settings-help=Enter the contributorName for the suggestions contributor, the displayGroupName with the header text to display, and the size to control the maximum results returned by the contributor. (Automatic Copy)
 suggestions-were-deleted-successfully=Suggestions were deleted successfully. (Automatic Copy)
 suite=Suite (Automatic Translation)
 sum=sum (Automatic Translation)
