--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -3066,6 +3066,7 @@ chapters=Kapitel
 character-options=Zeichenoptionen
 character-threshold=Zeichen-Schwellenwert
 character-threshold-for-displaying-suggestions=Zeichenschwellenwert für die Anzeige von Vorschlägen
+character-threshold-for-displaying-suggestions-help=Set the number of characters the user should type before seeing suggestions. (Automatic Copy)
 characters=Zeichen
 characters-blacklist=Zeichen-Blacklist
 characters-maximum=Maximale Zeichenanzahl
@@ -5377,6 +5378,7 @@ display-fields-and-one-to-one-relationships=Felder und 1:1-Beziehungen anzeigen.
 display-folder-facet=Ordnerfacette anzeigen
 display-frequencies=Frequenzen anzeigen
 display-group-name=Gruppenname anzeigen
+display-group-name-help=Enter the heading label for the suggestions from each contributor. (Automatic Copy)
 display-horizontally=Horizontal anzeigen
 display-immediately=Sofort anzeigen
 display-label=Label anzeigen
@@ -6739,6 +6741,7 @@ field.user-name=Name
 fields=Felder
 fields-are-added-if-you-need-to-distinguish-items-based-on-criteria-chosen-by-the-user=Felder werden hinzugefügt, wenn Sie nach Eigenschaften trennen müssen, basiert auf der Kriterienwahl des Nutzers. Wenn Sie - zum Beispiel - T-Shirts verkaufen, wollen Sie vielleicht ein Feld mit der Bezeichnung <em>Größe</em> und den Werten <em>S, M, L, XL</em>, einfügen. Die Werte mit Kommas als Trennungszeichen eingeben.
 fields-help=Liste mit Feldern, aus denen Text abgerufen und analysiert wird.
+fields-suggestion-help=Specify additional fields to return with the response. (Automatic Copy)
 fields-to-display=Anzuzeigende Felder
 fields-to-display-help=Geben Sie die Namen der Felder ein, die in der Zusammenfassung in einer kommagetrennten Liste angezeigt werden sollen. Wenn nicht gesetzt, werden alle Felder angezeigt. Das erste Feld wird immer als Titel angezeigt. Wenn zwei Felder gesetzt sind, wird immer das zweite Feld als Content angezeigt.
 fields-to-return=Zurückzusendende Felder
@@ -7828,7 +7831,9 @@ include-all-the-information-someone-would-need-to-answer-your-question=Geben Sie
 include-always=Immer einbeziehen
 include-artifact-in-repository=Artefakt in Repository einbeziehen
 include-asset-summary=Asset-Zusammenfassung hinzufügen
+include-asset-summary-help=Enable to return the result summary with the response. (Automatic Copy)
 include-asset-url=Asset-URL hinzufügen
+include-asset-url-help=Enable to return the link to the result with the response. (Automatic Copy)
 include-bundle-symbolic-name=Bundle Symbolische Namen aufnehmen
 include-bundle-symbolic-name-description=Bei Auswahl dieser Option wird das Bundle Symbolische Name ins Bereichspräfix aufgenommen.
 include-clear-filters-option=Option Filter löschen berücksichtigen
@@ -14987,6 +14992,7 @@ sites-tab-description=Sites können immer nur einer einzigen Eigenschaft zugewie
 sites-that-i-administer=Sites, die ich administriere
 sites-to-sync-x=Zu synchronisierende Sites - {0}
 size=Größe
+size-suggestion-help=Set the maximum number of results to display in suggestions. (Automatic Copy)
 skip-to-content=Zum Inhalt springen
 skip-to-search=Zur Suche springen
 sku=SKU
@@ -15502,6 +15508,7 @@ successfully-unassigned-display-page-template=Standardvorlage für die Anzeigese
 such-as-x-or-x=Zum Beispiel {0} oder {1}
 suffix=Suffix
 suggestion-contributor=Vorschläge-Beitragender
+suggestion-contributor-help=Enter the name of the contributor used to display suggestions. (Automatic Copy)
 suggestion-in-progress-email=E-Mail: Vorschlag in Bearbeitung
 suggestion-received-email=E-Mail: Vorschlag erhalten
 suggestion-resolved-email=E-Mail: Vorschlag geschlossen
@@ -15510,8 +15517,10 @@ suggestion-was-deleted-successfully=Vorschlag wurde erfolgreich gelöscht.
 suggestion-was-saved-successfully=Vorschlag wurde erfolgreich gespeichert.
 suggestions=Vorschläge
 suggestions-configuration=Konfiguration der Empfehlungen
+suggestions-configuration-description=Configure the suggestions a user sees while entering search terms. (Automatic Copy)
 suggestions-contributor-configuration=Vorschläge Betreiber-Konfiguration
 suggestions-contributor-configuration-help=Vorschläge Betreiber-Konfiguration JSON festlegen.
+suggestions-contributor-configuration-system-settings-help=Enter the contributorName for the suggestions contributor, the displayGroupName with the header text to display, and the size to control the maximum results returned by the contributor. (Automatic Copy)
 suggestions-were-deleted-successfully=Vorschläge wurden erfolgreich gelöscht.
 suite=Suite
 sum=Summe
