--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_MX.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_MX.properties
@@ -3066,6 +3066,7 @@ chapters=Capítulos
 character-options=Opciones de caracteres
 character-threshold=Character Threshold (Automatic Copy)
 character-threshold-for-displaying-suggestions=Umbral de caracteres para mostrar sugerencias
+character-threshold-for-displaying-suggestions-help=Set the number of characters the user should type before seeing suggestions. (Automatic Copy)
 characters=Caracteres
 characters-blacklist=Lista negra de caracteres
 characters-maximum=Número máximo de caracteres
@@ -5377,6 +5378,7 @@ display-fields-and-one-to-one-relationships=Muestra campos y relaciones uno a un
 display-folder-facet=Mostrar el filtro de directorio
 display-frequencies=Mostrar frecuencias
 display-group-name=Mostrar nombre de grupo
+display-group-name-help=Enter the heading label for the suggestions from each contributor. (Automatic Copy)
 display-horizontally=Mostrar horizontalmente
 display-immediately=Mostrar inmediatamente
 display-label=Mostrar etiqueta
@@ -6739,6 +6741,7 @@ field.user-name=Nombre de usuario
 fields=Campos
 fields-are-added-if-you-need-to-distinguish-items-based-on-criteria-chosen-by-the-user=Añada campos concretos por los que el usuario podrá buscar. Por ejemplo, si vende camisetas, puede añadir un campo con el nombre <em>Talla</em> y los valores <em>S, M, L, XL</em>. Introduzca los valores en una lista de opciones separadas por comas.
 fields-help=Lista de campos a partir de los que se obtendrá y analizará el texto.
+fields-suggestion-help=Specify additional fields to return with the response. (Automatic Copy)
 fields-to-display=Campos para mostrar
 fields-to-display-help=Especifique una lista separada por comas de los nombres de los campos que quiera que se muestren en el resumen. Si no se especifica, se mostrarán todos los campos. El primer campo siempre se muestra como el título. Si se especifican dos campos, el segundo campo siempre se muestra como el contenido.
 fields-to-return=Campos que se devolverán
@@ -7828,7 +7831,9 @@ include-all-the-information-someone-would-need-to-answer-your-question=Incluya t
 include-always=Incluir siempre
 include-artifact-in-repository=Incluir en el repositorio
 include-asset-summary=Incluir resumen de activos
+include-asset-summary-help=Enable to return the result summary with the response. (Automatic Copy)
 include-asset-url=Incluir URL del activo
+include-asset-url-help=Enable to return the link to the result with the response. (Automatic Copy)
 include-bundle-symbolic-name=Incluir nombre simbólico de grupo
 include-bundle-symbolic-name-description=Al seleccionar esta opción, el nombre simbólico del grupo se incluirá en el prefijo de ámbito.
 include-clear-filters-option=Incluir la opción Borrar filtros
@@ -14987,6 +14992,7 @@ sites-tab-description=Sites can only be assigned to a single property at a time.
 sites-that-i-administer=Sitios que yo administro
 sites-to-sync-x=Sitios que se sincronizarán: {0}
 size=Tamaño
+size-suggestion-help=Set the maximum number of results to display in suggestions. (Automatic Copy)
 skip-to-content=Saltar al contenido
 skip-to-search=Omitir a búsqueda
 sku=Ref.
@@ -15502,6 +15508,7 @@ successfully-unassigned-display-page-template=Se canceló correctamente la asign
 such-as-x-or-x=Como por ejemplo, {0} o {1}
 suffix=Sufijo
 suggestion-contributor=Contribuidor de la sugerencia
+suggestion-contributor-help=Enter the name of the contributor used to display suggestions. (Automatic Copy)
 suggestion-in-progress-email=Correo electrónico de sugerencia en progreso.
 suggestion-received-email=Correo electrónico de sugerencia recibida
 suggestion-resolved-email=Correo electrónico de sugerencia resuelta
@@ -15510,8 +15517,10 @@ suggestion-was-deleted-successfully=Se eliminó la sugerencia.
 suggestion-was-saved-successfully=Se guardó la sugerencia.
 suggestions=Sugerencias
 suggestions-configuration=Configuración de sugerencias
+suggestions-configuration-description=Configure the suggestions a user sees while entering search terms. (Automatic Copy)
 suggestions-contributor-configuration=Configuración del contribuidor de sugerencias
 suggestions-contributor-configuration-help=Establezca el JSON de configuración del contribuidor de sugerencias.
+suggestions-contributor-configuration-system-settings-help=Enter the contributorName for the suggestions contributor, the displayGroupName with the header text to display, and the size to control the maximum results returned by the contributor. (Automatic Copy)
 suggestions-were-deleted-successfully=Las sugerencias se eliminaron correctamente.
 suite=Conjunto de aplicaciones
 sum=Suma
