--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -3066,6 +3066,7 @@ chapters=Chapitres
 character-options=Options de caractère
 character-threshold=Character Threshold (Automatic Copy)
 character-threshold-for-displaying-suggestions=Seuil de caractères pour l'affichage des suggestions
+character-threshold-for-displaying-suggestions-help=Set the number of characters the user should type before seeing suggestions. (Automatic Copy)
 characters=Caractères
 characters-blacklist=Liste noire des caractères
 characters-maximum=caractères maximum
@@ -5377,6 +5378,7 @@ display-fields-and-one-to-one-relationships=Afficher les champs et les relations
 display-folder-facet=Afficher les facettes de dossier
 display-frequencies=Afficher les fréquences
 display-group-name=Afficher le nom du groupe
+display-group-name-help=Enter the heading label for the suggestions from each contributor. (Automatic Copy)
 display-horizontally=Afficher horizontalement
 display-immediately=Afficher immédiatement
 display-label=Libellé d'affichage
@@ -6739,6 +6741,7 @@ field.user-name=Nom d'utilisateur
 fields=Champs
 fields-are-added-if-you-need-to-distinguish-items-based-on-criteria-chosen-by-the-user=Ajout de nouveaux critères pour permettre à l'utilisateur d'affiner ses choix. Par exemple, si vous vendez des t-shirts, vous pouvez ajouter un critère <em>Taille</em> prenant pour valeurs <em>S, M, L, XL</em> (liste d'options séparées par des virgules).
 fields-help=Saisissez une liste de champs à extraire et à analyser à partir du document de saisie.
+fields-suggestion-help=Specify additional fields to return with the response. (Automatic Copy)
 fields-to-display=Champs à afficher
 fields-to-display-help=Saisissez les noms des champs à afficher dans le résumé, en liste avec virgules de séparation. S'ils ne sont pas définis, tous les champs sont affichés. Le premier champ est toujours affiché en tant que titre. Si deux champs sont définis, le deuxième est toujours affiché en tant que contenu.
 fields-to-return=Champs à renvoyer
@@ -7828,7 +7831,9 @@ include-all-the-information-someone-would-need-to-answer-your-question=Précisez
 include-always=Toujours inclure
 include-artifact-in-repository=Inclure l'objet dans le dépôt
 include-asset-summary=Inclure le résumé de l'actif
+include-asset-summary-help=Enable to return the result summary with the response. (Automatic Copy)
 include-asset-url=Inclure l'URL de l'actif
+include-asset-url-help=Enable to return the link to the result with the response. (Automatic Copy)
 include-bundle-symbolic-name=Inclure le nom symbolique du bundle
 include-bundle-symbolic-name-description=Quand sélectionné, le nom symbolique du bundle sera inclus dans le préfixe de la portée.
 include-clear-filters-option=Inclure l'option Effacer les filtres
@@ -14987,6 +14992,7 @@ sites-tab-description=Les sites ne peuvent être attribués qu'à une seule prop
 sites-that-i-administer=Sites que j'administre
 sites-to-sync-x=Sites à synchroniser - {0}
 size=Taille
+size-suggestion-help=Set the maximum number of results to display in suggestions. (Automatic Copy)
 skip-to-content=Saut au contenu
 skip-to-search=Passer à la recherche
 sku=Unité de gestion des stocks (SKU)
@@ -15502,6 +15508,7 @@ successfully-unassigned-display-page-template=Modèle de page d'affichage désat
 such-as-x-or-x=Tel que {0} ou {1}
 suffix=Suffixe
 suggestion-contributor=Contributeur de suggestions
+suggestion-contributor-help=Enter the name of the contributor used to display suggestions. (Automatic Copy)
 suggestion-in-progress-email=Email suggestion en cours
 suggestion-received-email=Email suggestion reçue
 suggestion-resolved-email=Email suggestion résolue
@@ -15510,8 +15517,10 @@ suggestion-was-deleted-successfully=La suggestion a bien été supprimée.
 suggestion-was-saved-successfully=La suggestion a bien été enregistrée.
 suggestions=Suggestions
 suggestions-configuration=Configuration des suggestions
+suggestions-configuration-description=Configure the suggestions a user sees while entering search terms. (Automatic Copy)
 suggestions-contributor-configuration=Configuration du contributeur de suggestions
 suggestions-contributor-configuration-help=Définissez le JSON de configuration du contributeur de suggestions.
+suggestions-contributor-configuration-system-settings-help=Enter the contributorName for the suggestions contributor, the displayGroupName with the header text to display, and the size to control the maximum results returned by the contributor. (Automatic Copy)
 suggestions-were-deleted-successfully=Les suggestions ont bien été supprimées.
 suite=Suite
 sum=Somme
