--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -3066,6 +3066,7 @@ chapters=चॅप्टरस
 character-options=चरित्र विकल्प (Automatic Translation)
 character-threshold=Character Threshold (Automatic Copy)
 character-threshold-for-displaying-suggestions=Character Threshold for Displaying Suggestions (Automatic Copy)
+character-threshold-for-displaying-suggestions-help=Set the number of characters the user should type before seeing suggestions. (Automatic Copy)
 characters=Characters (Automatic Copy)
 characters-blacklist=वर्ण ब्लैकलिस्ट (Automatic Translation)
 characters-maximum=अधिकतम चॅप्टरस
@@ -5377,6 +5378,7 @@ display-fields-and-one-to-one-relationships=Display fields and one to one relati
 display-folder-facet=डिस्प्ले फोल्डर फेस्ट (Automatic Translation)
 display-frequencies=प्रदर्शन आवृत्तियों (Automatic Translation)
 display-group-name=Display Group Name (Automatic Copy)
+display-group-name-help=Enter the heading label for the suggestions from each contributor. (Automatic Copy)
 display-horizontally=Display Horizontally (Automatic Copy)
 display-immediately=तुरंत प्रदर्शित करें (Automatic Translation)
 display-label=Display Label (Automatic Copy)
@@ -6739,6 +6741,7 @@ field.user-name=User Name (Automatic Copy)
 fields=फील्ड्स
 fields-are-added-if-you-need-to-distinguish-items-based-on-criteria-chosen-by-the-user=फील्ड्स आडेड होगे, यदि तुम यूज़र के दारा चुने गये क्राइटीरिया के आधार पर आइटम्स को अलग करना चाहते हो उदाहरण के लिए, यदि आप टीशर्ट बेच रहे हैं, आप साइज़ नाम की फील्ड जोरना चाहते है और वॅल्यूस <em>S, M, L, XL</em>.वॅल्यूस एंटर कीजेए एक लिस्ट के रूप में कॉमा लगा कर
 fields-help=इनपुट दस्तावेज़ से लाने और विश्लेषण करने के लिए फ़ील्ड की एक सूची दर्ज करें। (Automatic Translation)
+fields-suggestion-help=Specify additional fields to return with the response. (Automatic Copy)
 fields-to-display=प्रदर्शित करने के लिए फ़ील्ड (Automatic Translation)
 fields-to-display-help=एक अल्पविराम अलग सूची में, सारांश में प्रदर्शित करने के लिए खेतों के नाम दर्ज करें । यदि सेट नहीं है, तो सभी फ़ील्ड प्रदर्शित किए जाते हैं। पहला क्षेत्र हमेशा शीर्षक के रूप में प्रदर्शित किया जाता है। यदि दो फ़ील्ड सेट किए जाते हैं, तो दूसरा फ़ील्ड हमेशा सामग्री के रूप में प्रदर्शित होता है। (Automatic Translation)
 fields-to-return=वापस करने के लिए फ़ील्ड (Automatic Translation)
@@ -7828,7 +7831,9 @@ include-all-the-information-someone-would-need-to-answer-your-question=किस
 include-always=हमेशा शामिल करें (Automatic Translation)
 include-artifact-in-repository=Artifact को Repository में शामिल करें
 include-asset-summary=Include Asset Summary (Automatic Copy)
+include-asset-summary-help=Enable to return the result summary with the response. (Automatic Copy)
 include-asset-url=Include Asset URL (Automatic Copy)
+include-asset-url-help=Enable to return the link to the result with the response. (Automatic Copy)
 include-bundle-symbolic-name=बंडल प्रतीकात्मक नाम शामिल करें (Automatic Translation)
 include-bundle-symbolic-name-description=चयनित होने पर, बंडल प्रतीकात्मक नाम को स्कोप उपसर्ग में शामिल किया जाएगा। (Automatic Translation)
 include-clear-filters-option=Include Clear Filters Option (Automatic Copy)
@@ -14985,6 +14990,7 @@ sites-tab-description=Sites can only be assigned to a single property at a time.
 sites-that-i-administer=साइटें जो मैं प्रशासित करता हूं (Automatic Translation)
 sites-to-sync-x=सिंक के लिए साइटें - {0}
 size=साइज़
+size-suggestion-help=Set the maximum number of results to display in suggestions. (Automatic Copy)
 skip-to-content=सामग्री पर छोड़ें (Automatic Translation)
 skip-to-search=खोज करने के लिए छोड़ें (Automatic Translation)
 sku=स्कू (Automatic Translation)
@@ -15500,6 +15506,7 @@ successfully-unassigned-display-page-template=सफलतापूर्वक 
 such-as-x-or-x=Such as {0} or {1} (Automatic Copy)
 suffix=अनुलग्‍न (Automatic Translation)
 suggestion-contributor=Suggestion Contributor (Automatic Copy)
+suggestion-contributor-help=Enter the name of the contributor used to display suggestions. (Automatic Copy)
 suggestion-in-progress-email=प्रगति ईमेल में सुझाव (Automatic Translation)
 suggestion-received-email=सुझाव प्राप्त ईमेल (Automatic Translation)
 suggestion-resolved-email=सुझाव हल ईमेल (Automatic Translation)
@@ -15508,8 +15515,10 @@ suggestion-was-deleted-successfully=Suggestion was deleted successfully. (Automa
 suggestion-was-saved-successfully=Suggestion was saved successfully. (Automatic Copy)
 suggestions=सुझाव
 suggestions-configuration=Suggestions Configuration (Automatic Copy)
+suggestions-configuration-description=Configure the suggestions a user sees while entering search terms. (Automatic Copy)
 suggestions-contributor-configuration=Suggestions Contributor Configuration (Automatic Copy)
 suggestions-contributor-configuration-help=Set the suggestions contributor configuration JSON. (Automatic Copy)
+suggestions-contributor-configuration-system-settings-help=Enter the contributorName for the suggestions contributor, the displayGroupName with the header text to display, and the size to control the maximum results returned by the contributor. (Automatic Copy)
 suggestions-were-deleted-successfully=Suggestions were deleted successfully. (Automatic Copy)
 suite=फ़र्नीचर का सेट (Automatic Translation)
 sum=राशि (Automatic Translation)
