--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -3066,6 +3066,7 @@ chapters=Bab
 character-options=Opsi Karakter (Automatic Translation)
 character-threshold=Character Threshold (Automatic Copy)
 character-threshold-for-displaying-suggestions=Character Threshold for Displaying Suggestions (Automatic Copy)
+character-threshold-for-displaying-suggestions-help=Set the number of characters the user should type before seeing suggestions. (Automatic Copy)
 characters=Characters (Automatic Copy)
 characters-blacklist=Daftar Hitam Karakter (Automatic Translation)
 characters-maximum=Maksimum jumlah karakter
@@ -5377,6 +5378,7 @@ display-fields-and-one-to-one-relationships=Display fields and one to one relati
 display-folder-facet=Aspek Folder Tampilan (Automatic Translation)
 display-frequencies=Frekuensi Tampilan (Automatic Translation)
 display-group-name=Display Group Name (Automatic Copy)
+display-group-name-help=Enter the heading label for the suggestions from each contributor. (Automatic Copy)
 display-horizontally=Display Horizontally (Automatic Copy)
 display-immediately=Tampilkan Segera (Automatic Translation)
 display-label=Display Label (Automatic Copy)
@@ -6739,6 +6741,7 @@ field.user-name=User Name (Automatic Copy)
 fields=Field
 fields-are-added-if-you-need-to-distinguish-items-based-on-criteria-chosen-by-the-user=Fields ditambahkan jika Anda perlu untuk membedakan barang berdasarkan kriteria yang dipilih oleh pengguna. Misalnya, jika Anda menjual t-shirt, Anda mungkin ingin menambahkan sebuah field dengan nama <em>Ukuran</em> dan nilai <em>S, M, L, XL</em>. Masukkan nilai sebagai daftar pilihan akhiran koma.
 fields-help=Masukkan daftar bidang untuk diambil dan dianalisis dari dokumen input. (Automatic Translation)
+fields-suggestion-help=Specify additional fields to return with the response. (Automatic Copy)
 fields-to-display=Bidang yang Akan Ditampilkan (Automatic Translation)
 fields-to-display-help=Masukkan nama bidang untuk ditampilkan dalam ringkasan, dalam daftar koma yang dipisahkan. Jika tidak disetel, semua bidang ditampilkan. Bidang pertama selalu ditampilkan sebagai judul. Jika dua bidang diatur, bidang kedua selalu ditampilkan sebagai konten. (Automatic Translation)
 fields-to-return=Bidang yang Akan Dikembalikan (Automatic Translation)
@@ -7828,7 +7831,9 @@ include-all-the-information-someone-would-need-to-answer-your-question=Sertakan 
 include-always=Sertakan Selalu (Automatic Translation)
 include-artifact-in-repository=Sertakan Artefak di Repositori
 include-asset-summary=Include Asset Summary (Automatic Copy)
+include-asset-summary-help=Enable to return the result summary with the response. (Automatic Copy)
 include-asset-url=Include Asset URL (Automatic Copy)
+include-asset-url-help=Enable to return the link to the result with the response. (Automatic Copy)
 include-bundle-symbolic-name=Sertakan Nama Simbolis Bundel (Automatic Translation)
 include-bundle-symbolic-name-description=Ketika dipilih, nama simbolik bundel akan dimasukkan ke dalam awalan lingkup. (Automatic Translation)
 include-clear-filters-option=Include Clear Filters Option (Automatic Copy)
@@ -14985,6 +14990,7 @@ sites-tab-description=Sites can only be assigned to a single property at a time.
 sites-that-i-administer=Situs yang Saya Urus (Automatic Translation)
 sites-to-sync-x=Sites to Sync - {0} (Automatic Copy)
 size=Ukuran
+size-suggestion-help=Set the maximum number of results to display in suggestions. (Automatic Copy)
 skip-to-content=Melompat ke Konten
 skip-to-search=Lewatkan ke Pencarian (Automatic Translation)
 sku=Sku (Automatic Translation)
@@ -15500,6 +15506,7 @@ successfully-unassigned-display-page-template=Templat halaman tampilan berhasil 
 such-as-x-or-x=Seperti {0} atau {1}
 suffix=Akhiran
 suggestion-contributor=Suggestion Contributor (Automatic Copy)
+suggestion-contributor-help=Enter the name of the contributor used to display suggestions. (Automatic Copy)
 suggestion-in-progress-email=Saran dalam Email Yang Sedang Berlangsung (Automatic Translation)
 suggestion-received-email=Email yang Diterima Saran (Automatic Translation)
 suggestion-resolved-email=Email Terselesaikan Saran (Automatic Translation)
@@ -15508,8 +15515,10 @@ suggestion-was-deleted-successfully=Suggestion was deleted successfully. (Automa
 suggestion-was-saved-successfully=Suggestion was saved successfully. (Automatic Copy)
 suggestions=Saran
 suggestions-configuration=Suggestions Configuration (Automatic Copy)
+suggestions-configuration-description=Configure the suggestions a user sees while entering search terms. (Automatic Copy)
 suggestions-contributor-configuration=Suggestions Contributor Configuration (Automatic Copy)
 suggestions-contributor-configuration-help=Set the suggestions contributor configuration JSON. (Automatic Copy)
+suggestions-contributor-configuration-system-settings-help=Enter the contributorName for the suggestions contributor, the displayGroupName with the header text to display, and the size to control the maximum results returned by the contributor. (Automatic Copy)
 suggestions-were-deleted-successfully=Suggestions were deleted successfully. (Automatic Copy)
 suite=Suite (Automatic Translation)
 sum=Jumlah (Automatic Translation)
