--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -3066,6 +3066,7 @@ chapters=Bab (Automatic Translation)
 character-options=Opsyen Aksara (Automatic Translation)
 character-threshold=Character Threshold (Automatic Copy)
 character-threshold-for-displaying-suggestions=Character Threshold for Displaying Suggestions (Automatic Copy)
+character-threshold-for-displaying-suggestions-help=Set the number of characters the user should type before seeing suggestions. (Automatic Copy)
 characters=Characters (Automatic Copy)
 characters-blacklist=Senarai Hitam Aksara (Automatic Translation)
 characters-maximum=Maksimum Aksara (Automatic Translation)
@@ -5377,6 +5378,7 @@ display-fields-and-one-to-one-relationships=Display fields and one to one relati
 display-folder-facet=Paparkan Apar Folder (Automatic Translation)
 display-frequencies=Paparkan Frekuensi (Automatic Translation)
 display-group-name=Display Group Name (Automatic Copy)
+display-group-name-help=Enter the heading label for the suggestions from each contributor. (Automatic Copy)
 display-horizontally=Display Horizontally (Automatic Copy)
 display-immediately=Paparkan Dengan Serta-merta (Automatic Translation)
 display-label=Display Label (Automatic Copy)
@@ -6739,6 +6741,7 @@ field.user-name=User Name (Automatic Copy)
 fields=Bidang (Automatic Translation)
 fields-are-added-if-you-need-to-distinguish-items-based-on-criteria-chosen-by-the-user=Fields are added if you need to distinguish items based on criteria chosen by the user. For example, if you are selling t-shirts, you may want to add a field with the name <em>Size</em> and the values <em>S, M, L, XL</em>. Enter the values as a list of comma delimited options. (Automatic Copy)
 fields-help=Masukkan senarai medan untuk mengambil dan menganalisis daripada dokumen input. (Automatic Translation)
+fields-suggestion-help=Specify additional fields to return with the response. (Automatic Copy)
 fields-to-display=Medan untuk Dipaparkan (Automatic Translation)
 fields-to-display-help=Masukkan nama medan untuk dipaparkan dalam ringkasan, dalam senarai terpisah koma. Jika tidak disetkan, semua medan dipaparkan. Medan pertama sentiasa dipaparkan sebagai tajuk. Jika dua medan ditetapkan, medan kedua sentiasa dipaparkan sebagai kandungan. (Automatic Translation)
 fields-to-return=Medan untuk Kembali (Automatic Translation)
@@ -7828,7 +7831,9 @@ include-all-the-information-someone-would-need-to-answer-your-question=Sertakan 
 include-always=Sertakan Sentiasa (Automatic Translation)
 include-artifact-in-repository=Sertakan Artifak dalam Repositori (Automatic Translation)
 include-asset-summary=Include Asset Summary (Automatic Copy)
+include-asset-summary-help=Enable to return the result summary with the response. (Automatic Copy)
 include-asset-url=Include Asset URL (Automatic Copy)
+include-asset-url-help=Enable to return the link to the result with the response. (Automatic Copy)
 include-bundle-symbolic-name=Sertakan Nama Simbolik Ikatan (Automatic Translation)
 include-bundle-symbolic-name-description=Apabila dipilih, nama simbolik pakej akan dimasukkan ke dalam awalan skop. (Automatic Translation)
 include-clear-filters-option=Include Clear Filters Option (Automatic Copy)
@@ -14985,6 +14990,7 @@ sites-tab-description=Sites can only be assigned to a single property at a time.
 sites-that-i-administer=Tapak Yang Saya Mentadbir (Automatic Translation)
 sites-to-sync-x=Sites to Sync - {0} (Automatic Copy)
 size=Saiz (Automatic Translation)
+size-suggestion-help=Set the maximum number of results to display in suggestions. (Automatic Copy)
 skip-to-content=Langkau ke Kandungan (Automatic Translation)
 skip-to-search=Langkau ke Carian (Automatic Translation)
 sku=Sku (Automatic Translation)
@@ -15500,6 +15506,7 @@ successfully-unassigned-display-page-template=Berjaya menghapuskan templat halam
 such-as-x-or-x=Such as {0} or {1} (Automatic Copy)
 suffix=Suffix (Automatic Translation)
 suggestion-contributor=Suggestion Contributor (Automatic Copy)
+suggestion-contributor-help=Enter the name of the contributor used to display suggestions. (Automatic Copy)
 suggestion-in-progress-email=Cadangan dalam E-mel Kemajuan (Automatic Translation)
 suggestion-received-email=Cadangan Menerima E-mel (Automatic Translation)
 suggestion-resolved-email=Cadangan Diselesaikan E-mel (Automatic Translation)
@@ -15508,8 +15515,10 @@ suggestion-was-deleted-successfully=Suggestion was deleted successfully. (Automa
 suggestion-was-saved-successfully=Suggestion was saved successfully. (Automatic Copy)
 suggestions=Cadangan (Automatic Translation)
 suggestions-configuration=Suggestions Configuration (Automatic Copy)
+suggestions-configuration-description=Configure the suggestions a user sees while entering search terms. (Automatic Copy)
 suggestions-contributor-configuration=Suggestions Contributor Configuration (Automatic Copy)
 suggestions-contributor-configuration-help=Set the suggestions contributor configuration JSON. (Automatic Copy)
+suggestions-contributor-configuration-system-settings-help=Enter the contributorName for the suggestions contributor, the displayGroupName with the header text to display, and the size to control the maximum results returned by the contributor. (Automatic Copy)
 suggestions-were-deleted-successfully=Suggestions were deleted successfully. (Automatic Copy)
 suite=Suite (Automatic Translation)
 sum=Jumlah (Automatic Translation)
