--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -3066,6 +3066,7 @@ chapters=Hoofdstukken
 character-options=Tekenopties
 character-threshold=Character Threshold (Automatic Copy)
 character-threshold-for-displaying-suggestions=Tekenlimiet voor het weergeven van suggesties
+character-threshold-for-displaying-suggestions-help=Set the number of characters the user should type before seeing suggestions. (Automatic Copy)
 characters=Tekens
 characters-blacklist=Zwarte lijst tekens
 characters-maximum=Maximaal aantal tekens
@@ -5377,6 +5378,7 @@ display-fields-and-one-to-one-relationships=Geef velden en een-op-een relaties w
 display-folder-facet=Mapfacet weergeven
 display-frequencies=Frequenties weergeven
 display-group-name=Groepsnaam weergeven
+display-group-name-help=Enter the heading label for the suggestions from each contributor. (Automatic Copy)
 display-horizontally=Horizontaal weergeven
 display-immediately=Onmiddellijk weergeven
 display-label=Weergavelabel
@@ -6739,6 +6741,7 @@ field.user-name=Naam
 fields=Velden
 fields-are-added-if-you-need-to-distinguish-items-based-on-criteria-chosen-by-the-user=U kunt velden toevoegen om op basis van gekozen criteria een onderscheid te maken tussen artikelen. Verkoopt u bijvoorbeeld t-shirts, dan kunt u de veldnaam <em>Maat</em> en de waarden<em>S, M, L, XL</em> toevoegen. Voer de waarden in als een lijst van door komma's gescheiden opties.
 fields-help=Een lijst van velden waarvan tekst wordt opgehaald en geanalyseerd.
+fields-suggestion-help=Specify additional fields to return with the response. (Automatic Copy)
 fields-to-display=Weer te geven velden
 fields-to-display-help=Voer in een kommagescheiden lijst de namen in van de velden die moeten worden weergegeven in het overzicht. Als deze velden niet worden ingesteld, worden alle velden weergegeven. Het eerste veld wordt altijd weergegeven als titel. Als twee velden worden ingesteld, wordt het tweede veld altijd weergegeven als de inhoud.
 fields-to-return=Resultaatvelden
@@ -7828,7 +7831,9 @@ include-all-the-information-someone-would-need-to-answer-your-question=Voeg alle
 include-always=Altijd opnemen
 include-artifact-in-repository=Artefact toevoegen in bewaarplaats
 include-asset-summary=Assetoverzicht opnemen
+include-asset-summary-help=Enable to return the result summary with the response. (Automatic Copy)
 include-asset-url=Asset-URL opnemen
+include-asset-url-help=Enable to return the link to the result with the response. (Automatic Copy)
 include-bundle-symbolic-name=Symbolische Naam Bundel opnemen
 include-bundle-symbolic-name-description=Indien geselecteerd, wordt de symbolische naam van de bundel opgenomen in de prefix van het toepassingsbegied.
 include-clear-filters-option=De optie Filters wissen toevoegen
@@ -14988,6 +14993,7 @@ sites-tab-description=Sites kunnen slechts aan één eigenschap tegelijk worden 
 sites-that-i-administer=Sites die ik beheer
 sites-to-sync-x=Te synchroniseren sites - {0}
 size=Grootte
+size-suggestion-help=Set the maximum number of results to display in suggestions. (Automatic Copy)
 skip-to-content=Naar content
 skip-to-search=Naar zoeken
 sku=Artikelnummer
@@ -15503,6 +15509,7 @@ successfully-unassigned-display-page-template=Toewijzing aan de standaard weerga
 such-as-x-or-x=Zoals {0} of {1}
 suffix=Achtervoegsel
 suggestion-contributor=Suggestiebijdrager
+suggestion-contributor-help=Enter the name of the contributor used to display suggestions. (Automatic Copy)
 suggestion-in-progress-email=Suggesties in voortgangs Email
 suggestion-received-email=Suggesties Email ontvangen
 suggestion-resolved-email=Suggesties Email opgelost
@@ -15511,8 +15518,10 @@ suggestion-was-deleted-successfully=Suggestie verwijderd.
 suggestion-was-saved-successfully=Suggestie opgeslagen.
 suggestions=Suggesties
 suggestions-configuration=Suggestieconfiguratie
+suggestions-configuration-description=Configure the suggestions a user sees while entering search terms. (Automatic Copy)
 suggestions-contributor-configuration=Configuratie suggestie-inzender
 suggestions-contributor-configuration-help=Stel de JSON-configuratie van de suggestie-inzender in.
+suggestions-contributor-configuration-system-settings-help=Enter the contributorName for the suggestions contributor, the displayGroupName with the header text to display, and the size to control the maximum results returned by the contributor. (Automatic Copy)
 suggestions-were-deleted-successfully=Suggesties verwijderd.
 suite=Suite
 sum=Som
