--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
@@ -3066,6 +3066,7 @@ chapters=Hoofdstukken
 character-options=Character Options (Automatic Copy)
 character-threshold=Character Threshold (Automatic Copy)
 character-threshold-for-displaying-suggestions=Character Threshold for Displaying Suggestions (Automatic Copy)
+character-threshold-for-displaying-suggestions-help=Set the number of characters the user should type before seeing suggestions. (Automatic Copy)
 characters=Characters (Automatic Copy)
 characters-blacklist=Characters Blacklist (Automatic Copy)
 characters-maximum=Maximum aantal karakters
@@ -5377,6 +5378,7 @@ display-fields-and-one-to-one-relationships=Display fields and one to one relati
 display-folder-facet=Display Folder Facet (Automatic Copy)
 display-frequencies=Display Frequencies (Automatic Copy)
 display-group-name=Display Group Name (Automatic Copy)
+display-group-name-help=Enter the heading label for the suggestions from each contributor. (Automatic Copy)
 display-horizontally=Display Horizontally (Automatic Copy)
 display-immediately=Display Immediately (Automatic Copy)
 display-label=Display Label (Automatic Copy)
@@ -6739,6 +6741,7 @@ field.user-name=User Name (Automatic Copy)
 fields=Velden
 fields-are-added-if-you-need-to-distinguish-items-based-on-criteria-chosen-by-the-user=Velden kunnen worden toegevoegd wanneer items zichzelf moeten onderscheiden op basis van door de gebruiker gekozen criteria. Wanneer je bijv. T-shirts zou verkopen, zou je de veldnaam <em>Maat</em> en de waarden <em>S, M, L, XL</em> toevoegen. Voer de waarden in als een lijst van opties gescheiden met een komma.
 fields-help=Enter a list of fields to fetch and analyze from the input document. (Automatic Copy)
+fields-suggestion-help=Specify additional fields to return with the response. (Automatic Copy)
 fields-to-display=Fields to Display (Automatic Copy)
 fields-to-display-help=Enter the names of the fields to display in the summary, in a comma separated list. If not set, all fields are displayed. The first field is always displayed as the title. If two fields are set, the second field is always displayed as the content. (Automatic Copy)
 fields-to-return=Fields to Return (Automatic Copy)
@@ -7828,7 +7831,9 @@ include-all-the-information-someone-would-need-to-answer-your-question=Include a
 include-always=Include Always (Automatic Copy)
 include-artifact-in-repository=Artefact in bewaarplaats invoegen
 include-asset-summary=Include Asset Summary (Automatic Copy)
+include-asset-summary-help=Enable to return the result summary with the response. (Automatic Copy)
 include-asset-url=Include Asset URL (Automatic Copy)
+include-asset-url-help=Enable to return the link to the result with the response. (Automatic Copy)
 include-bundle-symbolic-name=Include Bundle Symbolic Name (Automatic Copy)
 include-bundle-symbolic-name-description=When selected, bundle symbolic name will be included into scope prefix. (Automatic Copy)
 include-clear-filters-option=Include Clear Filters Option (Automatic Copy)
@@ -14988,6 +14993,7 @@ sites-tab-description=Sites can only be assigned to a single property at a time.
 sites-that-i-administer=Sites That I Administer (Automatic Copy)
 sites-to-sync-x=Sites to Sync - {0} (Automatic Copy)
 size=Grootte
+size-suggestion-help=Set the maximum number of results to display in suggestions. (Automatic Copy)
 skip-to-content=Naar content
 skip-to-search=Skip to Search (Automatic Copy)
 sku=Artikelnummer
@@ -15503,6 +15509,7 @@ successfully-unassigned-display-page-template=Successfully unassigned display pa
 such-as-x-or-x=Zoals {0} of {1}
 suffix=Achtervoegsel
 suggestion-contributor=Suggestion Contributor (Automatic Copy)
+suggestion-contributor-help=Enter the name of the contributor used to display suggestions. (Automatic Copy)
 suggestion-in-progress-email=Suggestion in Progress Email (Automatic Copy)
 suggestion-received-email=Suggestion Received Email (Automatic Copy)
 suggestion-resolved-email=Suggestion Resolved Email (Automatic Copy)
@@ -15511,8 +15518,10 @@ suggestion-was-deleted-successfully=Suggestion was deleted successfully. (Automa
 suggestion-was-saved-successfully=Suggestion was saved successfully. (Automatic Copy)
 suggestions=Suggesties
 suggestions-configuration=Suggestions Configuration (Automatic Copy)
+suggestions-configuration-description=Configure the suggestions a user sees while entering search terms. (Automatic Copy)
 suggestions-contributor-configuration=Suggestions Contributor Configuration (Automatic Copy)
 suggestions-contributor-configuration-help=Set the suggestions contributor configuration JSON. (Automatic Copy)
+suggestions-contributor-configuration-system-settings-help=Enter the contributorName for the suggestions contributor, the displayGroupName with the header text to display, and the size to control the maximum results returned by the contributor. (Automatic Copy)
 suggestions-were-deleted-successfully=Suggestions were deleted successfully. (Automatic Copy)
 suite=Suite (Automatic Copy)
 sum=Sum (Automatic Copy)
