--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -3066,6 +3066,7 @@ chapters=Rozdziały
 character-options=Opcje znaków (Automatic Translation)
 character-threshold=Character Threshold (Automatic Copy)
 character-threshold-for-displaying-suggestions=Character Threshold for Displaying Suggestions (Automatic Copy)
+character-threshold-for-displaying-suggestions-help=Set the number of characters the user should type before seeing suggestions. (Automatic Copy)
 characters=Characters (Automatic Copy)
 characters-blacklist=Czarne listy postaci (Automatic Translation)
 characters-maximum=Maksymalna ilość znaków
@@ -5377,6 +5378,7 @@ display-fields-and-one-to-one-relationships=Display fields and one to one relati
 display-folder-facet=Pokaż wygląd folderu
 display-frequencies=Częstotliwości wyświetlania (Automatic Translation)
 display-group-name=Display Group Name (Automatic Copy)
+display-group-name-help=Enter the heading label for the suggestions from each contributor. (Automatic Copy)
 display-horizontally=Display Horizontally (Automatic Copy)
 display-immediately=Wyświetl natychmiast
 display-label=Display Label (Automatic Copy)
@@ -6739,6 +6741,7 @@ field.user-name=User Name (Automatic Copy)
 fields=Pola
 fields-are-added-if-you-need-to-distinguish-items-based-on-criteria-chosen-by-the-user=Dodaj pola jeśli potrzebujesz rozróżnienia przedmiotów w oparciu o kryteria wybrane przez użytkownika. Na przykład, jeśli sprzedajesz koszulki możesz chcieć dodać pole o nazwie <em>Rozmiar</em> i o wartościach <em>S, M, L, XL</em>. Wprowadź wartości jako listę opcji oddzielonych przecinkiem.
 fields-help=Wprowadź listę pól do pobrania i analizy z dokumentu wejściowego. (Automatic Translation)
+fields-suggestion-help=Specify additional fields to return with the response. (Automatic Copy)
 fields-to-display=Pola do wyświetlenia (Automatic Translation)
 fields-to-display-help=Wprowadź nazwy pól, które mają być wyświetlane w podsumowaniu, na liście oddzielonej przecinkami. Jeśli nie jest ustawiona, zostaną wyświetlone wszystkie pola. Pierwsze pole jest zawsze wyświetlane jako tytuł. Jeśli ustawiono dwa pola, drugie pole jest zawsze wyświetlane jako zawartość. (Automatic Translation)
 fields-to-return=Pola do zwrócenia (Automatic Translation)
@@ -7828,7 +7831,9 @@ include-all-the-information-someone-would-need-to-answer-your-question=Podaj wsz
 include-always=Uwzględnij Zawsze
 include-artifact-in-repository=Dołącz artefakt w repozytorium
 include-asset-summary=Include Asset Summary (Automatic Copy)
+include-asset-summary-help=Enable to return the result summary with the response. (Automatic Copy)
 include-asset-url=Include Asset URL (Automatic Copy)
+include-asset-url-help=Enable to return the link to the result with the response. (Automatic Copy)
 include-bundle-symbolic-name=Dołącz nazwę symboliczną pakietu (Automatic Translation)
 include-bundle-symbolic-name-description=Po wybraniu tej opcji nazwa symboliczna pakietu zostanie uwzględniona w prefiksie zakresu. (Automatic Translation)
 include-clear-filters-option=Include Clear Filters Option (Automatic Copy)
@@ -14985,6 +14990,7 @@ sites-tab-description=Sites can only be assigned to a single property at a time.
 sites-that-i-administer=Witryny, którymi administruję
 sites-to-sync-x=Sites to Sync - {0} (Automatic Copy)
 size=Rozmiar
+size-suggestion-help=Set the maximum number of results to display in suggestions. (Automatic Copy)
 skip-to-content=Przejdź do zawartości
 skip-to-search=Przejdź do wyszukiwania
 sku=Numer jednostki magazynowej (Automatic Translation)
@@ -15500,6 +15506,7 @@ successfully-unassigned-display-page-template=Pomyślnie nieprzypisany szablon s
 such-as-x-or-x=Taki jak {0} lub {1}
 suffix=Przyrostek
 suggestion-contributor=Suggestion Contributor (Automatic Copy)
+suggestion-contributor-help=Enter the name of the contributor used to display suggestions. (Automatic Copy)
 suggestion-in-progress-email=Sugestia w toku E-mail (Automatic Translation)
 suggestion-received-email=Otrzymana wiadomość e-mail z sugestią (Automatic Translation)
 suggestion-resolved-email=Wiadomość e-mail rozwiązana z sugestią (Automatic Translation)
@@ -15508,8 +15515,10 @@ suggestion-was-deleted-successfully=Suggestion was deleted successfully. (Automa
 suggestion-was-saved-successfully=Suggestion was saved successfully. (Automatic Copy)
 suggestions=Sugestie
 suggestions-configuration=Suggestions Configuration (Automatic Copy)
+suggestions-configuration-description=Configure the suggestions a user sees while entering search terms. (Automatic Copy)
 suggestions-contributor-configuration=Suggestions Contributor Configuration (Automatic Copy)
 suggestions-contributor-configuration-help=Set the suggestions contributor configuration JSON. (Automatic Copy)
+suggestions-contributor-configuration-system-settings-help=Enter the contributorName for the suggestions contributor, the displayGroupName with the header text to display, and the size to control the maximum results returned by the contributor. (Automatic Copy)
 suggestions-were-deleted-successfully=Suggestions were deleted successfully. (Automatic Copy)
 suite=Suite (Automatic Translation)
 sum=Suma (Automatic Translation)
