--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -3066,6 +3066,7 @@ chapters=Capítulos
 character-options=Opções de caracteres
 character-threshold=Limite de caractere
 character-threshold-for-displaying-suggestions=Limite de caracteres para a exibição de sugestões
+character-threshold-for-displaying-suggestions-help=Set the number of characters the user should type before seeing suggestions. (Automatic Copy)
 characters=Caracteres
 characters-blacklist=Lista de bloqueios de caracteres
 characters-maximum=Máximo de caracteres
@@ -5377,6 +5378,7 @@ display-fields-and-one-to-one-relationships=Exibe campos e relacionamentos um a 
 display-folder-facet=Exibir a Faceta de Pastas
 display-frequencies=Frequências de exibição
 display-group-name=Exibir nome do grupo
+display-group-name-help=Enter the heading label for the suggestions from each contributor. (Automatic Copy)
 display-horizontally=Exibir horizontalmente
 display-immediately=Exibir imediatamente
 display-label=Exibir rótulo
@@ -6739,6 +6741,7 @@ field.user-name=Nome
 fields=Campos
 fields-are-added-if-you-need-to-distinguish-items-based-on-criteria-chosen-by-the-user=Campos serão adicionados se você necessitar distinguir itens baseados nos critérios escolhidos pelo usuário. Por exemplo, se você estiver selecionando camisetas, você pode querer adicionar campos de <em>Tamanho</em> e os valores <em>P, M, G e GG</em>. Insira os valores separados por vírgula nas opções.
 fields-help=Uma lista de campos para buscar e analisar o formato do texto.
+fields-suggestion-help=Specify additional fields to return with the response. (Automatic Copy)
 fields-to-display=Campos para Exibir
 fields-to-display-help=Insira os nomes dos campos a serem exibidos no resumo, em uma lista dividida por vírgulas. Se não definido, todos os campos são exibidos. O primeiro campo sempre é exibido como o título. Se dois campos forem definidos, o segundo campo sempre é exibido como conteúdo.
 fields-to-return=Campos para Devolver
@@ -7828,7 +7831,9 @@ include-all-the-information-someone-would-need-to-answer-your-question=Inclua to
 include-always=Incluir sempre
 include-artifact-in-repository=Incluir artefato no repositório
 include-asset-summary=Incluir resumo de recursos
+include-asset-summary-help=Enable to return the result summary with the response. (Automatic Copy)
 include-asset-url=Incluir URL do recurso
+include-asset-url-help=Enable to return the link to the result with the response. (Automatic Copy)
 include-bundle-symbolic-name=Incluir o Nome Simbólico do Pacote
 include-bundle-symbolic-name-description=Quando selecionado, nome simbólico do pacote será incluído no prefixo de escopo.
 include-clear-filters-option=Incluir opção de filtros para limpar
@@ -14985,6 +14990,7 @@ sites-tab-description=Os sites só podem ser atribuídos a uma única propriedad
 sites-that-i-administer=Sites que Eu Administro
 sites-to-sync-x=Sites para sincronizar - {0}
 size=Tamanho
+size-suggestion-help=Set the maximum number of results to display in suggestions. (Automatic Copy)
 skip-to-content=Pular para o Conteúdo
 skip-to-search=Pular para a busca
 sku=SKU
@@ -15500,6 +15506,7 @@ successfully-unassigned-display-page-template=Atribuição cancelada com sucesso
 such-as-x-or-x=Como {0} ou {1}
 suffix=Sufixo
 suggestion-contributor=Contribuidor de sugestão
+suggestion-contributor-help=Enter the name of the contributor used to display suggestions. (Automatic Copy)
 suggestion-in-progress-email=Email de Sugestão em Progresso
 suggestion-received-email=Email de Sugestão Recebida
 suggestion-resolved-email=Email de Sugestão Resolvida
@@ -15508,8 +15515,10 @@ suggestion-was-deleted-successfully=A sugestão foi excluída com sucesso.
 suggestion-was-saved-successfully=A sugestão foi salva com sucesso.
 suggestions=Sugestões
 suggestions-configuration=Configuração de sugestões
+suggestions-configuration-description=Configure the suggestions a user sees while entering search terms. (Automatic Copy)
 suggestions-contributor-configuration=Configuração do distribuidor de sugestões
 suggestions-contributor-configuration-help=Define o JSON de configuração do contribuir de sugestões.
+suggestions-contributor-configuration-system-settings-help=Enter the contributorName for the suggestions contributor, the displayGroupName with the header text to display, and the size to control the maximum results returned by the contributor. (Automatic Copy)
 suggestions-were-deleted-successfully=As sugestões foram excluídas com sucesso.
 suite=Suíte
 sum=Soma
