--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -3066,6 +3066,7 @@ chapters=Capítulos
 character-options=Opções de caracteres (Automatic Translation)
 character-threshold=Character Threshold (Automatic Copy)
 character-threshold-for-displaying-suggestions=Character Threshold for Displaying Suggestions (Automatic Copy)
+character-threshold-for-displaying-suggestions-help=Set the number of characters the user should type before seeing suggestions. (Automatic Copy)
 characters=Characters (Automatic Copy)
 characters-blacklist=Personagens Lista Negra (Automatic Translation)
 characters-maximum=Caráteres Máximos
@@ -5377,6 +5378,7 @@ display-fields-and-one-to-one-relationships=Display fields and one to one relati
 display-folder-facet=Apresentar a Faceta de Pastas
 display-frequencies=Frequências de exibição (Automatic Translation)
 display-group-name=Display Group Name (Automatic Copy)
+display-group-name-help=Enter the heading label for the suggestions from each contributor. (Automatic Copy)
 display-horizontally=Display Horizontally (Automatic Copy)
 display-immediately=Exibir imediatamente
 display-label=Display Label (Automatic Copy)
@@ -6739,6 +6741,7 @@ field.user-name=Nome do Utilizador
 fields=Campos
 fields-are-added-if-you-need-to-distinguish-items-based-on-criteria-chosen-by-the-user=Os campos serão adicionados se necessitar distinguir itens baseados nos critérios escolhidos pelo utilizador. Por exemplo, se estiver a vender t-shirts, pode querer adicionar campos de <em>Tamanho</em> e os valores <em>S, M, L e XL</em>. Insira os valores separados por vírgula nas opções.
 fields-help=Digite uma lista de campos para buscar e analisar a partir do documento de entrada. (Automatic Translation)
+fields-suggestion-help=Specify additional fields to return with the response. (Automatic Copy)
 fields-to-display=Campos para exibir (Automatic Translation)
 fields-to-display-help=Digite os nomes dos campos para exibir no resumo, em uma lista separada de círgula. Se não for definido, todos os campos são exibidos. O primeiro campo é sempre exibido como o título. Se dois campos forem definidos, o segundo campo será sempre exibido como o conteúdo. (Automatic Translation)
 fields-to-return=Campos para Retornar (Automatic Translation)
@@ -7828,7 +7831,9 @@ include-all-the-information-someone-would-need-to-answer-your-question=Inclua to
 include-always=Incluir Sempre (Automatic Translation)
 include-artifact-in-repository=Incluir artefato no repositório
 include-asset-summary=Include Asset Summary (Automatic Copy)
+include-asset-summary-help=Enable to return the result summary with the response. (Automatic Copy)
 include-asset-url=Include Asset URL (Automatic Copy)
+include-asset-url-help=Enable to return the link to the result with the response. (Automatic Copy)
 include-bundle-symbolic-name=Inclua o nome simbólico do pacote (Automatic Translation)
 include-bundle-symbolic-name-description=Quando selecionado, o nome simbólico do pacote será incluído no prefixo do escopo. (Automatic Translation)
 include-clear-filters-option=Include Clear Filters Option (Automatic Copy)
@@ -14987,6 +14992,7 @@ sites-tab-description=Sites can only be assigned to a single property at a time.
 sites-that-i-administer=Sites que eu administro
 sites-to-sync-x=Sites to Sync - {0} (Automatic Copy)
 size=Tamanho
+size-suggestion-help=Set the maximum number of results to display in suggestions. (Automatic Copy)
 skip-to-content=Passar para o Conteúdo
 skip-to-search=Passar para a Pesquisa
 sku=SKU (Automatic Copy)
@@ -15502,6 +15508,7 @@ successfully-unassigned-display-page-template=Modelo de página de exibição se
 such-as-x-or-x=Como {0} ou {1}
 suffix=Sufixo
 suggestion-contributor=Suggestion Contributor (Automatic Copy)
+suggestion-contributor-help=Enter the name of the contributor used to display suggestions. (Automatic Copy)
 suggestion-in-progress-email=Email de Sugestão em Progresso
 suggestion-received-email=Email de Sugestão Recebida
 suggestion-resolved-email=Email de Sugestão Resolvida
@@ -15510,8 +15517,10 @@ suggestion-was-deleted-successfully=Suggestion was deleted successfully. (Automa
 suggestion-was-saved-successfully=Suggestion was saved successfully. (Automatic Copy)
 suggestions=Sugestões
 suggestions-configuration=Suggestions Configuration (Automatic Copy)
+suggestions-configuration-description=Configure the suggestions a user sees while entering search terms. (Automatic Copy)
 suggestions-contributor-configuration=Suggestions Contributor Configuration (Automatic Copy)
 suggestions-contributor-configuration-help=Set the suggestions contributor configuration JSON. (Automatic Copy)
+suggestions-contributor-configuration-system-settings-help=Enter the contributorName for the suggestions contributor, the displayGroupName with the header text to display, and the size to control the maximum results returned by the contributor. (Automatic Copy)
 suggestions-were-deleted-successfully=Suggestions were deleted successfully. (Automatic Copy)
 suite=suíte (Automatic Translation)
 sum=soma (Automatic Translation)
