--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -3066,6 +3066,7 @@ chapters=Capitole
 character-options=Opțiuni caracter (Automatic Translation)
 character-threshold=Character Threshold (Automatic Copy)
 character-threshold-for-displaying-suggestions=Character Threshold for Displaying Suggestions (Automatic Copy)
+character-threshold-for-displaying-suggestions-help=Set the number of characters the user should type before seeing suggestions. (Automatic Copy)
 characters=Characters (Automatic Copy)
 characters-blacklist=Lista neagră a caracterelor (Automatic Translation)
 characters-maximum=Maximum de caractere
@@ -5377,6 +5378,7 @@ display-fields-and-one-to-one-relationships=Display fields and one to one relati
 display-folder-facet=Afișarefață folder (Automatic Translation)
 display-frequencies=Afișare frecvențe (Automatic Translation)
 display-group-name=Display Group Name (Automatic Copy)
+display-group-name-help=Enter the heading label for the suggestions from each contributor. (Automatic Copy)
 display-horizontally=Display Horizontally (Automatic Copy)
 display-immediately=Afișare imediată (Automatic Translation)
 display-label=Display Label (Automatic Copy)
@@ -6739,6 +6741,7 @@ field.user-name=User Name (Automatic Copy)
 fields=Câmpuri
 fields-are-added-if-you-need-to-distinguish-items-based-on-criteria-chosen-by-the-user=Câmpurile sunt adăugate dacă ai nevoie să distingi elementele bazate pe criteriile folosite de utilizatori. De exemplu, dacă ai nevoie să vinzi tricouri, ai dori să adaugi un câmp cu numele <em>Mărime</em> şi valorile <em>S, M, L, XL</em>. Introdu valorile ca o listă de opţiuni delimitate prin virgulă.
 fields-help=Introduceți o listă de câmpuri de preluat și analizat din documentul de intrare. (Automatic Translation)
+fields-suggestion-help=Specify additional fields to return with the response. (Automatic Copy)
 fields-to-display=Câmpuri de afișat (Automatic Translation)
 fields-to-display-help=Introduceți numele câmpurilor de afișat în rezumat, într-o listă separată prin virgulă. Dacă nu sunt setate, toate câmpurile sunt afișate. Primul câmp este întotdeauna afișat ca titlu. Dacă sunt setate două câmpuri, al doilea câmp se afișează întotdeauna ca conținut. (Automatic Translation)
 fields-to-return=Câmpuri de returnat (Automatic Translation)
@@ -7828,7 +7831,9 @@ include-all-the-information-someone-would-need-to-answer-your-question=Includeț
 include-always=Includere întotdeauna (Automatic Translation)
 include-artifact-in-repository=Include Artefact în Repertoriu.
 include-asset-summary=Include Asset Summary (Automatic Copy)
+include-asset-summary-help=Enable to return the result summary with the response. (Automatic Copy)
 include-asset-url=Include Asset URL (Automatic Copy)
+include-asset-url-help=Enable to return the link to the result with the response. (Automatic Copy)
 include-bundle-symbolic-name=Includere nume simbolic pachet (Automatic Translation)
 include-bundle-symbolic-name-description=Când este selectat, numele simbolic al pachetului va fi inclus în prefixul domeniului. (Automatic Translation)
 include-clear-filters-option=Include Clear Filters Option (Automatic Copy)
@@ -14985,6 +14990,7 @@ sites-tab-description=Sites can only be assigned to a single property at a time.
 sites-that-i-administer=Site-uri pe care le administrez (Automatic Translation)
 sites-to-sync-x=Sites to Sync - {0} (Automatic Copy)
 size=Marime
+size-suggestion-help=Set the maximum number of results to display in suggestions. (Automatic Copy)
 skip-to-content=Sari la continut
 skip-to-search=Salt la căutare (Automatic Translation)
 sku=SKU-uri
@@ -15500,6 +15506,7 @@ successfully-unassigned-display-page-template=Șablon de pagină de afișare nea
 such-as-x-or-x=Such as {0} or {1} (Automatic Copy)
 suffix=Subfix
 suggestion-contributor=Suggestion Contributor (Automatic Copy)
+suggestion-contributor-help=Enter the name of the contributor used to display suggestions. (Automatic Copy)
 suggestion-in-progress-email=Sugestie în curs de e-mail (Automatic Translation)
 suggestion-received-email=Sugestie primită e-mail (Automatic Translation)
 suggestion-resolved-email=Sugestie e-mail rezolvat (Automatic Translation)
@@ -15508,8 +15515,10 @@ suggestion-was-deleted-successfully=Suggestion was deleted successfully. (Automa
 suggestion-was-saved-successfully=Suggestion was saved successfully. (Automatic Copy)
 suggestions=Sugestii
 suggestions-configuration=Suggestions Configuration (Automatic Copy)
+suggestions-configuration-description=Configure the suggestions a user sees while entering search terms. (Automatic Copy)
 suggestions-contributor-configuration=Suggestions Contributor Configuration (Automatic Copy)
 suggestions-contributor-configuration-help=Set the suggestions contributor configuration JSON. (Automatic Copy)
+suggestions-contributor-configuration-system-settings-help=Enter the contributorName for the suggestions contributor, the displayGroupName with the header text to display, and the size to control the maximum results returned by the contributor. (Automatic Copy)
 suggestions-were-deleted-successfully=Suggestions were deleted successfully. (Automatic Copy)
 suite=Suite (Automatic Translation)
 sum=Suma (Automatic Translation)
