--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -3066,6 +3066,7 @@ chapters=Kapitoly
 character-options=Možnosti znakov (Automatic Translation)
 character-threshold=Character Threshold (Automatic Copy)
 character-threshold-for-displaying-suggestions=Character Threshold for Displaying Suggestions (Automatic Copy)
+character-threshold-for-displaying-suggestions-help=Set the number of characters the user should type before seeing suggestions. (Automatic Copy)
 characters=Characters (Automatic Copy)
 characters-blacklist=Čierny zoznam znakov (Automatic Translation)
 characters-maximum=Maximum znakov
@@ -5377,6 +5378,7 @@ display-fields-and-one-to-one-relationships=Display fields and one to one relati
 display-folder-facet=Zobraziť fazetu priečinka
 display-frequencies=Zobraziť frekvencie (Automatic Translation)
 display-group-name=Display Group Name (Automatic Copy)
+display-group-name-help=Enter the heading label for the suggestions from each contributor. (Automatic Copy)
 display-horizontally=Display Horizontally (Automatic Copy)
 display-immediately=Zobraziť hneď
 display-label=Display Label (Automatic Copy)
@@ -6739,6 +6741,7 @@ field.user-name=User Name (Automatic Copy)
 fields=Políčka
 fields-are-added-if-you-need-to-distinguish-items-based-on-criteria-chosen-by-the-user=Políčka sa pridávajú, ako potrebujete rolíšiť položky na základe používateľom určených kritérií. Príklad: ak predávate tričká, môžete chcieť pridať políčko s názvom <em>Veľkosť</em> a hodnoty <em>S, M, L, XL</em>. Hodnoty zadávajte ako zoznam, ktorého položky sú oddelené čiarkou.
 fields-help=Zadajte zoznam polí na načítanie a analýzu zo vstupného dokumentu. (Automatic Translation)
+fields-suggestion-help=Specify additional fields to return with the response. (Automatic Copy)
 fields-to-display=Polia na zobrazenie (Automatic Translation)
 fields-to-display-help=Do zoznamu oddeleného čiarkou zadajte názvy polí, ktoré sa majú zobraziť v súhrne. Ak nie je nastavená, zobrazia sa všetky polia. Prvé pole sa vždy zobrazí ako názov. Ak sú nastavené dve polia, druhé pole sa vždy zobrazí ako obsah. (Automatic Translation)
 fields-to-return=Polia, ktoré sa majú vrátiť (Automatic Translation)
@@ -7828,7 +7831,9 @@ include-all-the-information-someone-would-need-to-answer-your-question=Uveďte v
 include-always=Zahrnúť vždy (Automatic Translation)
 include-artifact-in-repository=Zahrnúť artefakt do úložiska
 include-asset-summary=Include Asset Summary (Automatic Copy)
+include-asset-summary-help=Enable to return the result summary with the response. (Automatic Copy)
 include-asset-url=Include Asset URL (Automatic Copy)
+include-asset-url-help=Enable to return the link to the result with the response. (Automatic Copy)
 include-bundle-symbolic-name=Zahrnúť symbolický názov balíka (Automatic Translation)
 include-bundle-symbolic-name-description=Ak je táto možnosť vybratá, symbolický názov zväzku sa zahrnie do predpony rozsahu. (Automatic Translation)
 include-clear-filters-option=Include Clear Filters Option (Automatic Copy)
@@ -14985,6 +14990,7 @@ sites-tab-description=Sites can only be assigned to a single property at a time.
 sites-that-i-administer=Sídla, ktoré spravujem ja
 sites-to-sync-x=Sites to Sync - {0} (Automatic Copy)
 size=Veľkosť
+size-suggestion-help=Set the maximum number of results to display in suggestions. (Automatic Copy)
 skip-to-content=Preskoč na obsah
 skip-to-search=Preskoćiť na hľadanie
 sku=Sku (Automatic Translation)
@@ -15500,6 +15506,7 @@ successfully-unassigned-display-page-template=Šablóna nepriradenej zobrazenej 
 such-as-x-or-x=Ako je {0} alebo {1}
 suffix=Titul za menom
 suggestion-contributor=Suggestion Contributor (Automatic Copy)
+suggestion-contributor-help=Enter the name of the contributor used to display suggestions. (Automatic Copy)
 suggestion-in-progress-email=Email o rozpracovanom návrhu
 suggestion-received-email=E-mail o prijatí návrhu
 suggestion-resolved-email=E-mail o vyriešení návrhu
@@ -15508,8 +15515,10 @@ suggestion-was-deleted-successfully=Suggestion was deleted successfully. (Automa
 suggestion-was-saved-successfully=Suggestion was saved successfully. (Automatic Copy)
 suggestions=Návrhy
 suggestions-configuration=Suggestions Configuration (Automatic Copy)
+suggestions-configuration-description=Configure the suggestions a user sees while entering search terms. (Automatic Copy)
 suggestions-contributor-configuration=Suggestions Contributor Configuration (Automatic Copy)
 suggestions-contributor-configuration-help=Set the suggestions contributor configuration JSON. (Automatic Copy)
+suggestions-contributor-configuration-system-settings-help=Enter the contributorName for the suggestions contributor, the displayGroupName with the header text to display, and the size to control the maximum results returned by the contributor. (Automatic Copy)
 suggestions-were-deleted-successfully=Suggestions were deleted successfully. (Automatic Copy)
 suite=suita (Automatic Translation)
 sum=Súčet (Automatic Translation)
