--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -3066,6 +3066,7 @@ chapters=Kapitel
 character-options=Teckenalternativ
 character-threshold=Teckengräns
 character-threshold-for-displaying-suggestions=Tröskelvärde för tecken för att visa förslag
+character-threshold-for-displaying-suggestions-help=Set the number of characters the user should type before seeing suggestions. (Automatic Copy)
 characters=Tecken
 characters-blacklist=Svartlista för tecken
 characters-maximum=Max antal tecken
@@ -5377,6 +5378,7 @@ display-fields-and-one-to-one-relationships=Visa fält och en-till-en-förhålla
 display-folder-facet=Visa mappfasett
 display-frequencies=Visa frekvenser
 display-group-name=Visa gruppnamn
+display-group-name-help=Enter the heading label for the suggestions from each contributor. (Automatic Copy)
 display-horizontally=Visa horisontellt
 display-immediately=Visa direkt
 display-label=Visa etikett
@@ -6739,6 +6741,7 @@ field.user-name=Namn
 fields=Fält
 fields-are-added-if-you-need-to-distinguish-items-based-on-criteria-chosen-by-the-user=Fält läggs till om du behöver separera varorna. Exempelvis, om du säljer T-shirts, vill du förmodligen lägga till ett fält med namnet <em>Storlek</em> som innehåller <em>S, M, L, XL</em>. Separera alla värden i fältet med kommatecken.
 fields-help=En lista med fält för att hämta och analysera textformuläret.
+fields-suggestion-help=Specify additional fields to return with the response. (Automatic Copy)
 fields-to-display=Fält att visa
 fields-to-display-help=Ange namnen på fältet som ska visas i sammanfattningen, i en kommaseparerad lista. Om detta inte anges kommer alla fält att visas. Det första fältet visas alltid som titel. Om två fält anges kommer det andra fältet alltid att visas som innehåll.
 fields-to-return=Fält att returnera
@@ -7828,7 +7831,9 @@ include-all-the-information-someone-would-need-to-answer-your-question=Inkludera
 include-always=Inkludera Alltid
 include-artifact-in-repository=Inkludera artefakt i lagringsplatsen
 include-asset-summary=Inkludera resurssammanfattning
+include-asset-summary-help=Enable to return the result summary with the response. (Automatic Copy)
 include-asset-url=Inkludera resurs-URL
+include-asset-url-help=Enable to return the link to the result with the response. (Automatic Copy)
 include-bundle-symbolic-name=Ange paketets symboliska namn
 include-bundle-symbolic-name-description=När detta väljs inkluderas paketets symboliska namn i omfångets prefix.
 include-clear-filters-option=Inkludera alternativ att rensa filter
@@ -14985,6 +14990,7 @@ sites-tab-description=Webbplatser kan bara tilldelas till en resurs åt gången.
 sites-that-i-administer=Webbplatser som jag administrerar
 sites-to-sync-x=Platser att synkronisera - {0}
 size=Storlek
+size-suggestion-help=Set the maximum number of results to display in suggestions. (Automatic Copy)
 skip-to-content=Hoppa till innehåll
 skip-to-search=Hoppa över till sökning
 sku=Artikelnr
@@ -15500,6 +15506,7 @@ successfully-unassigned-display-page-template=Tilldelning har tagits bort för f
 such-as-x-or-x=Som {0} eller {1}
 suffix=Suffix
 suggestion-contributor=Deltagare för förslag
+suggestion-contributor-help=Enter the name of the contributor used to display suggestions. (Automatic Copy)
 suggestion-in-progress-email=E-post med förslag pågår
 suggestion-received-email=E-post med förslag mottaget
 suggestion-resolved-email=E-post med förslag löst
@@ -15508,8 +15515,10 @@ suggestion-was-deleted-successfully=Förslaget har tagits bort.
 suggestion-was-saved-successfully=Förslag har sparats.
 suggestions=Förslag
 suggestions-configuration=Konfiguration av förslag
+suggestions-configuration-description=Configure the suggestions a user sees while entering search terms. (Automatic Copy)
 suggestions-contributor-configuration=Konfiguration för förslagsdeltagare
 suggestions-contributor-configuration-help=Ställ in konfigurations-JSON för förslagsdeltagare.
+suggestions-contributor-configuration-system-settings-help=Enter the contributorName for the suggestions contributor, the displayGroupName with the header text to display, and the size to control the maximum results returned by the contributor. (Automatic Copy)
 suggestions-were-deleted-successfully=Förslag har tagits bort.
 suite=Svit
 sum=Summa
