--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -3066,6 +3066,7 @@ chapters=அத்தியாயங்கள்
 character-options=Character Options (Automatic Copy)
 character-threshold=Character Threshold (Automatic Copy)
 character-threshold-for-displaying-suggestions=Character Threshold for Displaying Suggestions (Automatic Copy)
+character-threshold-for-displaying-suggestions-help=Set the number of characters the user should type before seeing suggestions. (Automatic Copy)
 characters=Characters (Automatic Copy)
 characters-blacklist=Characters Blacklist (Automatic Copy)
 characters-maximum=அதிகபட்ச எழுத்துகள்
@@ -5377,6 +5378,7 @@ display-fields-and-one-to-one-relationships=Display fields and one to one relati
 display-folder-facet=Display Folder Facet (Automatic Copy)
 display-frequencies=அதிர்வெண்களைக் காட்டு
 display-group-name=Display Group Name (Automatic Copy)
+display-group-name-help=Enter the heading label for the suggestions from each contributor. (Automatic Copy)
 display-horizontally=Display Horizontally (Automatic Copy)
 display-immediately=உடனடி காட்சி
 display-label=Display Label (Automatic Copy)
@@ -6739,6 +6741,7 @@ field.user-name=பெயர்
 fields=Fields (Automatic Copy)
 fields-are-added-if-you-need-to-distinguish-items-based-on-criteria-chosen-by-the-user=Fields are added if you need to distinguish items based on criteria chosen by the user. For example, if you are selling t-shirts, you may want to add a field with the name <em>Size</em> and the values <em>S, M, L, XL</em>. Enter the values as a list of comma delimited options. (Automatic Copy)
 fields-help=Enter a list of fields to fetch and analyze from the input document. (Automatic Copy)
+fields-suggestion-help=Specify additional fields to return with the response. (Automatic Copy)
 fields-to-display=Fields to Display (Automatic Copy)
 fields-to-display-help=Enter the names of the fields to display in the summary, in a comma-separated list. If not set, all fields are displayed. The first field is always displayed as the title. If two fields are set, the second field is always displayed as the content.
 fields-to-return=Fields to Return (Automatic Copy)
@@ -7828,7 +7831,9 @@ include-all-the-information-someone-would-need-to-answer-your-question=Include a
 include-always=எப்போதும் சேர்க்கவும்
 include-artifact-in-repository=Include Artifact in Repository (Automatic Copy)
 include-asset-summary=Include Asset Summary (Automatic Copy)
+include-asset-summary-help=Enable to return the result summary with the response. (Automatic Copy)
 include-asset-url=Include Asset URL (Automatic Copy)
+include-asset-url-help=Enable to return the link to the result with the response. (Automatic Copy)
 include-bundle-symbolic-name=Include Bundle Symbolic Name (Automatic Copy)
 include-bundle-symbolic-name-description=When selected, bundle symbolic name will be included into scope prefix. (Automatic Copy)
 include-clear-filters-option=Include Clear Filters Option (Automatic Copy)
@@ -14985,6 +14990,7 @@ sites-tab-description=Sites can only be assigned to a single property at a time.
 sites-that-i-administer=நான் நிர்வகிக்கும் தளங்கள்
 sites-to-sync-x=Sites to Sync - {0} (Automatic Copy)
 size=அளவு
+size-suggestion-help=Set the maximum number of results to display in suggestions. (Automatic Copy)
 skip-to-content=உள்ளடக்கத்திற்கு செல்க
 skip-to-search=தேடலுக்கு செல்லவும்
 sku=SKU (Automatic Copy)
@@ -15500,6 +15506,7 @@ successfully-unassigned-display-page-template=Successfully unassigned display pa
 such-as-x-or-x={0} அல்லது {1} போன்ற
 suffix=பின்னொட்டு
 suggestion-contributor=Suggestion Contributor (Automatic Copy)
+suggestion-contributor-help=Enter the name of the contributor used to display suggestions. (Automatic Copy)
 suggestion-in-progress-email=In Progress மின்னஞ்சலில் ஆலோசனை
 suggestion-received-email=பரிந்துரை பெற்ற மின்னஞ்சல்
 suggestion-resolved-email=மின்னஞ்சல் தீர்வு யோசனை
@@ -15508,8 +15515,10 @@ suggestion-was-deleted-successfully=Suggestion was deleted successfully. (Automa
 suggestion-was-saved-successfully=Suggestion was saved successfully. (Automatic Copy)
 suggestions=பரிந்துரைகள்
 suggestions-configuration=Suggestions Configuration (Automatic Copy)
+suggestions-configuration-description=Configure the suggestions a user sees while entering search terms. (Automatic Copy)
 suggestions-contributor-configuration=Suggestions Contributor Configuration (Automatic Copy)
 suggestions-contributor-configuration-help=Set the suggestions contributor configuration JSON. (Automatic Copy)
+suggestions-contributor-configuration-system-settings-help=Enter the contributorName for the suggestions contributor, the displayGroupName with the header text to display, and the size to control the maximum results returned by the contributor. (Automatic Copy)
 suggestions-were-deleted-successfully=Suggestions were deleted successfully. (Automatic Copy)
 suite=Suite (Automatic Copy)
 sum=Sum (Automatic Copy)
