--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -3066,6 +3066,7 @@ chapters=Bölümler
 character-options=Karakter Seçenekleri (Automatic Translation)
 character-threshold=Character Threshold (Automatic Copy)
 character-threshold-for-displaying-suggestions=Character Threshold for Displaying Suggestions (Automatic Copy)
+character-threshold-for-displaying-suggestions-help=Set the number of characters the user should type before seeing suggestions. (Automatic Copy)
 characters=Characters (Automatic Copy)
 characters-blacklist=Karakterler Kara Listesi (Automatic Translation)
 characters-maximum=Maksimum Karakter
@@ -5377,6 +5378,7 @@ display-fields-and-one-to-one-relationships=Display fields and one to one relati
 display-folder-facet=Klasör Yönünü Görüntüle (Automatic Translation)
 display-frequencies=Görüntü Frekansları (Automatic Translation)
 display-group-name=Display Group Name (Automatic Copy)
+display-group-name-help=Enter the heading label for the suggestions from each contributor. (Automatic Copy)
 display-horizontally=Display Horizontally (Automatic Copy)
 display-immediately=Hemen Görüntüle (Automatic Translation)
 display-label=Display Label (Automatic Copy)
@@ -6739,6 +6741,7 @@ field.user-name=User Name (Automatic Copy)
 fields=Alanlar
 fields-are-added-if-you-need-to-distinguish-items-based-on-criteria-chosen-by-the-user=Kullanıcı tarafından seçilmiş kriterlere göre ayırmak gerekiyorsa alanlar eklenecek. Örneğin t-shirt satıyorsanız <em>beden</em> diye bir alan ayırabilir, <em>S, M, L, XL</em> değerlerini girebilirsiniz.
 fields-help=Giriş belgesinden getirip çözümlemek için alan listesi girin. (Automatic Translation)
+fields-suggestion-help=Specify additional fields to return with the response. (Automatic Copy)
 fields-to-display=Görüntülenecek Alanlar (Automatic Translation)
 fields-to-display-help=Özette görüntülenecek alanların adlarını virgülle ayrılmış bir listeye girin. Ayarlanmazsa, tüm alanlar görüntülenir. İlk alan her zaman başlık olarak görüntülenir. İki alan ayarlanırsa, ikinci alan her zaman içerik olarak görüntülenir. (Automatic Translation)
 fields-to-return=İade Edilen Alanlar (Automatic Translation)
@@ -7828,7 +7831,9 @@ include-all-the-information-someone-would-need-to-answer-your-question=Birinin s
 include-always=Her Zaman Ekle (Automatic Translation)
 include-artifact-in-repository=Depodaki kodu dail et.
 include-asset-summary=Include Asset Summary (Automatic Copy)
+include-asset-summary-help=Enable to return the result summary with the response. (Automatic Copy)
 include-asset-url=Include Asset URL (Automatic Copy)
+include-asset-url-help=Enable to return the link to the result with the response. (Automatic Copy)
 include-bundle-symbolic-name=Paket Sembolik Adını Ekle (Automatic Translation)
 include-bundle-symbolic-name-description=Seçildiğinde, paket sembolik adı kapsam önekine dahil edilir. (Automatic Translation)
 include-clear-filters-option=Include Clear Filters Option (Automatic Copy)
@@ -14985,6 +14990,7 @@ sites-tab-description=Sites can only be assigned to a single property at a time.
 sites-that-i-administer=Yönettiğim Siteler (Automatic Translation)
 sites-to-sync-x=Sites to Sync - {0} (Automatic Copy)
 size=Boyut
+size-suggestion-help=Set the maximum number of results to display in suggestions. (Automatic Copy)
 skip-to-content=İçeriğe Atla (Automatic Translation)
 skip-to-search=Aramaya Atla (Automatic Translation)
 sku=Sku (Automatic Translation)
@@ -15500,6 +15506,7 @@ successfully-unassigned-display-page-template=Ataması başarıyla yapılan gör
 such-as-x-or-x=Such as {0} or {1} (Automatic Copy)
 suffix=Sonek
 suggestion-contributor=Suggestion Contributor (Automatic Copy)
+suggestion-contributor-help=Enter the name of the contributor used to display suggestions. (Automatic Copy)
 suggestion-in-progress-email=Öneri Sürüyor E-posta (Automatic Translation)
 suggestion-received-email=Öneri Alınan E-posta (Automatic Translation)
 suggestion-resolved-email=Öneri Çözümlenmiş E-posta (Automatic Translation)
@@ -15508,8 +15515,10 @@ suggestion-was-deleted-successfully=Suggestion was deleted successfully. (Automa
 suggestion-was-saved-successfully=Suggestion was saved successfully. (Automatic Copy)
 suggestions=Öneriler
 suggestions-configuration=Suggestions Configuration (Automatic Copy)
+suggestions-configuration-description=Configure the suggestions a user sees while entering search terms. (Automatic Copy)
 suggestions-contributor-configuration=Suggestions Contributor Configuration (Automatic Copy)
 suggestions-contributor-configuration-help=Set the suggestions contributor configuration JSON. (Automatic Copy)
+suggestions-contributor-configuration-system-settings-help=Enter the contributorName for the suggestions contributor, the displayGroupName with the header text to display, and the size to control the maximum results returned by the contributor. (Automatic Copy)
 suggestions-were-deleted-successfully=Suggestions were deleted successfully. (Automatic Copy)
 suite=maiyet (Automatic Translation)
 sum=Toplam (Automatic Translation)
