--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -6598,7 +6598,7 @@ feature.flag.status.description.beta=Beta features are experimental and not supp
 feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
 feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
 feature.flag.status.title.beta=Beta (Automatic Copy)
-feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.dev=Vývojář
 feature.flag.status.title.release=Release (Automatic Copy)
 featured=Uváděné
 featured-content=Featured Content (Automatic Copy)
