--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -2806,7 +2806,7 @@ category.breadcrumbs=ब्रेडक्रंब (Automatic Translation)
 category.captcha=कैप्चा (Automatic Translation)
 category.catalog=सूची
 category.channel=चैनल
-category.chat=गपशप (Automatic Translation)
+category.chat=चैट
 category.christianity=क्रिस्चिनिटी
 category.click-to-chat=चैट करने के लिए क्लिक करें (Automatic Translation)
 category.cms=कॉंटेंट प्रबंधन
@@ -6597,8 +6597,8 @@ fbml=फबीएमल
 feature.flag.status.description.beta=Beta features are experimental and not supported. Use with caution. (Automatic Copy)
 feature.flag.status.description.dev=Developer features are under active development. Do not activate unless you are on a development instance of DXP. (Automatic Copy)
 feature.flag.status.description.release=Release features provide an easy way to onboard new functionality in DXP. They are fully supported and can be activated individually and progressively. (Automatic Copy)
-feature.flag.status.title.beta=Beta (Automatic Copy)
-feature.flag.status.title.dev=Developer (Automatic Copy)
+feature.flag.status.title.beta=बीटा
+feature.flag.status.title.dev=डेवलपर
 feature.flag.status.title.release=Release (Automatic Copy)
 featured=फीचर्ड आइटम्स
 featured-content=विशेष रुप से प्रदर्शित सामग्री (Automatic Translation)
